--- a/data/equipment/consumable-04-0lhh2l4kh3QrwYH9.htm
+++ b/data/equipment/consumable-04-0lhh2l4kh3QrwYH9.htm
@@ -1,10 +1,13 @@
 Name: Hobbling Snare
-Nom: 
-État: auto-trad
+Nom: Piège entrave
+État: libre
 
 ------ Description (en) ------
 <p><span>You rig vines, ropes, or wires to cinch tight around a creature that triggers this snare. The first creature to enter the square must attempt a DC 20 Reflex save.<br /></span></p>
 <p><span><strong>Critical Success</strong> The creature is unaffected.<br /><strong>Success</strong> The creature takes a -5-foot status penalty to its Speed for 1 minute or until it Escapes (DC 18).<br /><strong>Failure</strong> As success, but the penalty is -10 feet.<br /><strong>Critical Failure</strong> As success, but the penalty is -20 feet.</span></p>
 ------ Description (fr) ------
-<p><span>Vous montez des lianes, des cordes ou des fils pour les serrer autour d'une créature qui déclenche ce piège. La première créature à pénétrer dans le carré doit tenter une sauvegarde par réflexe DC 20.<br /></span></p>
-<p><span><strong>Succès critique</strong> La créature n'est pas affectée.<br /><strong>Succès</strong> La créature subit une pénalité d'état de -5 pieds à sa Vitesse pendant 1 minute ou jusqu'à ce qu'elle s'échappe (DC 18). <br /><strong>Échec</strong> Comme une réussite, mais la pénalité est de -10 pieds.<br /><strong>Échec critique</strong> Comme une réussite, mais la pénalité est de -20 pieds.</span></p>
+<p>Vous assemblez des lianes, des cordes ou des fils afin de fabriquer un piège qui les serrer autour d'une créature. La première créature à pénétrer dans le case du piège entrave,  doit tenter un jet de sauvegarde Réflexe DD 20.</p>
+<p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
+<p><strong>Succès</strong> La créature subit une pénalité d'état de -1,5 mètres à sa Vitesse pendant 1 minute ou jusqu'à ce qu'elle s'Échappe (DD 18).</p>
+<p><strong>Échec</strong> Comme une réussite, mais la pénalité est de -3 mètres.</p>
+<p><strong>Échec critique</strong> Comme une réussite, mais la pénalité est de -6 mètres.</p>
