--- a/data/equipment/consumable-03-rfyWXgrVD2lm91CC.htm
+++ b/data/equipment/consumable-03-rfyWXgrVD2lm91CC.htm
@@ -13,12 +13,12 @@ Nom: Poison de Libellule Bleue
 <p><strong>Stage 2</strong> @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Dazzled} and @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Frightened} 1 (10 minutes)</p>
 <p><strong>Stage 3</strong> @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Frightened} 1 and @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confused} (1 minute)<br /></p>
 ------ Description (fr) ------
-Les Bourbiérins préparent une toxine puissante à base de libellules bleues. Les Oracles des marais consomment ce mélange pour éveiller leurs pouvoirs divins, mais le poison inspire des hallucinations paralysantes à la plupart des autres créatures.</p>
+<p>Les Bourbiérins préparent une toxine puissante à base de libellules bleues. Les Oracles des marais consomment ce mélange pour éveiller leurs pouvoirs divins, mais le poison inspire des hallucinations paralysantes à la plupart des autres créatures.</p>
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Ingéré)</p>
-<p><strong>Jet de sauvegarde</strong> DD 17 Vigueur</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 17 </p>
 <p><strong>Début</strong> 10 minutes</p>
 <p><strong>Durée maximale</strong> 30 minutes</p>
-<p><strong>Étape 1</strong> @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Ébloui} (10 minutes)</p>
-<p><strong>Stage 2</strong> Ébloui et @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Éffayé} 1 (10 minutes)</p>
-<p><strong>Étape 3</strong> Éffayé 1 et @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus} (1 minute)<br /></p>
+<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Ébloui} (10 minutes)</p>
+<p><strong>Stade 2</strong> Ébloui et @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayé} 1 (10 minutes)</p>
+<p><strong>Stade 3</strong> Effrayé 1 et @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus} (1 minute)</p>
