capacités de classe de l'alchimiste

--- a/data/classfeatures/alchemist-01-tvdb1jkjl2bRZjSp.htm
+++ b/data/classfeatures/alchemist-01-tvdb1jkjl2bRZjSp.htm
@@ -21,17 +21,17 @@ Nom: Mutagèniste
 ------ Description (fr) ------
 <p>Vous êtes fasciné par les bizarres transformations mutagènes qui sacrifient un des aspects physiques ou psychologiques d’une créature afin d’en renforcer un autre. Vous commencez avec les formules de deux mutagènes de niveau 1 dans votre formulaire, en plus de vos autres formules.</p>
 <p>Vous bénéficiez de l’action gratuite suivante :</p>
-<h3 class="title">@Compendium[pf2e.actionspf2e.00LNVSCbwJ8pszwE]{Flashback du mutagène}</h3>
-<p><strong>Fréquence </strong> un par jour &nbsp;</p>
+<h3>@Compendium[pf2e.actionspf2e.00LNVSCbwJ8pszwE]{Flashback du mutagène}</h3>
+<p><strong>Fréquence </strong> une fois par jour</p>
 <hr />
-<p> Vous bénéficiez d’une brève résurgence d’un mutagène. Choisissez-en un que vous avez consommé depuis vos derniers préparatifs quotidiens. Vous profitez de ses effets pendant 1 minute.</p>
-<h2 class="title">Découverte de domaine de recherche <span style="float: right;">Niveau 5</span></h2>
-<p> Quand vous utilisez alchimie avancée pour faire des mutagènes lors de vos préparatifs quotidiens, vous pouvez utiliser un lot de réactifs pour créer trois mutagènes de n’importe quel type au lieu de deux mutagènes d’un seul type.</p>
-<h2 class="title">Infusions perpétuelles<span style="float: right;">Niveau 7</span></h2>
-<p> Choisissez deux formules parmi les suivantes: @Compendium[pf2e.equipment-srd.ZR1TnC34ohP5nROX]{Mutagène bestial (inférieur)}, Mutagène de sérénité (inférieur), @Compendium[pf2e.equipment-srd.zrcJMKdwxSKxxLEG]{Mutagène cognitif (inférieur)}, @Compendium[pf2e.equipment-srd.iDgo3OfnikwNGyfo]{Mutagène juggernaut (inférieur)}, @Compendium[pf2e.equipment-srd.ChFYb3A94KNByRui]{Mutagène de vif-argent (inférieur)}, @Compendium[pf2e.equipment-srd.5fnEOtROEy2hkzDG]{Mutagène de langue dorée (inférieur)}.
-<h2 class="title"> Efficacité perpétuelle <span style="float: right;">Niveau 11</span></h2>
+<p>Vous bénéficiez d’une brève résurgence d’un mutagène. Choisissez-en un que vous avez consommé depuis vos derniers préparatifs quotidiens. Vous profitez de ses effets pendant 1 minute.</p>
+<h2>Découverte de domaine de recherche <span style="float: right;">Niveau 5</span></h2>
+<p>Quand vous utilisez alchimie avancée pour faire des mutagènes lors de vos préparatifs quotidiens, vous pouvez utiliser un lot de réactifs pour créer trois mutagènes de n’importe quel type au lieu de deux mutagènes d’un seul type.</p>
+<h2>Infusions perpétuelles<span style="float: right;">Niveau 7</span></h2>
+<p>Choisissez deux formules parmi les suivantes: @Compendium[pf2e.equipment-srd.ZR1TnC34ohP5nROX]{Mutagène bestial (inférieur)}, Mutagène de sérénité (inférieur), @Compendium[pf2e.equipment-srd.zrcJMKdwxSKxxLEG]{Mutagène cognitif (inférieur)}, @Compendium[pf2e.equipment-srd.iDgo3OfnikwNGyfo]{Mutagène juggernaut (inférieur)}, @Compendium[pf2e.equipment-srd.ChFYb3A94KNByRui]{Mutagène de vif-argent (inférieur)}, @Compendium[pf2e.equipment-srd.5fnEOtROEy2hkzDG]{Mutagène de langue dorée (inférieur)}.
+<h2>Efficacité perpétuelle <span style="float: right;">Niveau 11</span></h2>
 <p>La version moyenne des mutagènes que vous avez choisis pour vos infusions perpétuelles.</p>
-<h2 class="title"> Découverte de domaine de recherche supérieure <span style="float: right;">Niveau 13</span></h2>
+<h2>Découverte de domaine de recherche supérieure <span style="float: right;">Niveau 13</span></h2>
 <p>Si vous êtes sous l’effet d’un mutagène que vous avez créé et que vous absorbez un autre mutagène, vous cumulez les avantages et les inconvénients de ces deux mutagènes, même s’ils possèdent tous les deux le trait métamorphose et ne pourraient normalement pas fonctionner de concert. Si, alors que vous êtes sous l’effet de deux mutagènes, vous vous trouvez sous l’effet d’un nouveau mutagène, vous perdez l’avantage de l’un des deux premiers mutagènes de votre choix, tout en conservant les inconvénients liés à l’ensemble des mutagènes absorbés. Si, alors que vous êtes sous l’effet de deux mutagènes, vous êtes affecté par un effet de métamorphose qui n’est pas lié à un mutagène, vous perdez les avantages liés aux deux mutagènes mais en conservez les inconvénients.</p>
-<h2 class="title"> Perfection perpétuelle <span style="float: right;">Niveau 17</span></h2>
+<h2>Perfection perpétuelle <span style="float: right;">Niveau 17</span></h2>
 <p>La version supérieure des mutagènes que vous avez choisis pour vos infusions perpétuelles.</p>
