--- a/data/classfeatures/alchemist-13-bv3Qel8v9tpoFbw4.htm
+++ b/data/classfeatures/alchemist-13-bv3Qel8v9tpoFbw4.htm
@@ -1,8 +1,8 @@
 Name: Alchemist Armor Expertise (Level 13)
-Nom: 
-État: auto-trad
+Nom: Expertise avec les armures de l'alchimiste (Niveau 13)
+État: libre
 
 ------ Description (en) ------
 <p>You've learned how to dodge while wearing medium, light or no armor. Your proficiency ranks for medium armor, light armor and unarmored defense increase to expert.</p>
 ------ Description (fr) ------
-<p>Vous'avez appris à esquiver en portant une armure moyenne, légère ou sans armure. Vos rangs de compétence pour les armures moyennes, les armures légères et la défense sans armure passent à expert.</p>
+<p>Vous avez appris comment esquiver en portant une armure intermédiaire, légère ou pas d'armure. Votre rang de maîtrise avec les armures intermédiaires, les armures légères et la défense sans armure passe à expert.</p>
