--- a/data/classfeatures/alchemist-01-7JbiaZ8bxODM5mzS.htm
+++ b/data/classfeatures/alchemist-01-7JbiaZ8bxODM5mzS.htm
@@ -18,13 +18,13 @@ Nom: Artificier
 ------ Description (fr) ------
 <p>Vous vous spécialisez dans les explosions et les réactions alchimiques violentes. Vous commencez avec les formules de deux bombes alchimiques de niveau 1 dans votre formulaire, en plus de vos autres formules.</p>
 <p>Quand vous lancez une bombe alchimique dotée du trait éclaboussure, vous pouvez choisir d’infliger des dégâts d’éclaboussure seulement à votre cible principale plutôt que sur la zone d’éclaboussure normale.</p>
-<h2 class="title">Découverte de domaine de recherche<span style="float: right;">Niveau 5</span></h2>
+<h2>Découverte de domaine de recherche<span style="float: right;">Niveau 5</span></h2>
 <p>Quand vous utilisez alchimie avancée pour faire des bombes lors de vos préparatifs quotidiens, vous pouvez utiliser un lot de réactifs pour créer trois bombes de n’importe quel type au lieu de deux bombes d’un seul type.</p>
-<h2 class="title">Infusions perpétuelles<span style="float: right;">Niveau 7</span></h2>
+<h2>Infusions perpétuelles<span style="float: right;">Niveau 7</span></h2>
 <p>Choisissez deux formules parmi les suivantes : @Compendium[pf2e.equipment-srd.M1k5QQc1qQLxzyCK]{fiole d'acide (inférieure)}, @Compendium[pf2e.equipment-srd.yd3kEK21YknZLlcT]{feu grégeois (inférieur)}, @Compendium[pf2e.equipment-srd.AFR01HVd7DcZvkpP]{foudre en bouteille (inférieur)}, @Compendium[pf2e.equipment-srd.EpxmUtLpCkE8R6KJ]{fiole givrée (inférieure)}, @Compendium[pf2e.equipment-srd.T6Appwwl6nUl56Xj]{sacoche immobilisante (inférieure)}, @Compendium[pf2e.equipment-srd.Xnqglykl3Cif8rN9]{pierre à tonerre (inférieure)}</p>
-<h2 class="title">Efficacité perpétuelle<span style="float: right;">Niveau 11</span></h2>
+<h2>Efficacité perpétuelle<span style="float: right;">Niveau 11</span></h2>
 <p>La version moyenne des bombes que vous avez choisies pour vos infusions perpétuelles.</p>
-<h2 class="title">Découverte de domaine de recherche supérieure<span style="float: right;">Niveau 13</span></h2>
+<h2>Découverte de domaine de recherche supérieure<span style="float: right;">Niveau 13</span></h2>
 <p>Vous pouvez agrandir la zone d’éclaboussure de vos bombes afin de blesser des créatures dans un rayon de 3 m, ou de 4,50 m si vous possédez le don @Compendium[pf2e.feats-srd.gyVcJfZTmBytLsXq]{Éclaboussure élargie}.</p>
-<h2 class="title">Perfection perpétuelle<span style="float: right;">Niveau 17</span></h2>
+<h2>Perfection perpétuelle<span style="float: right;">Niveau 17</span></h2>
 <p>La version supérieure des bombes que vous avez choisies pour vos infusions perpétuelles.</p>
