--- a/data/classfeatures/alchemist-01-P9quO9XZi3OWFe1k.htm
+++ b/data/classfeatures/alchemist-01-P9quO9XZi3OWFe1k.htm
@@ -20,12 +20,12 @@ Nom: Toxicologiste
 <p>Vous vous spécialisez dans les toxines et les venins de toutes sortes. Vous débutez avec les formules de deux poisons aclhimiques courants dans votre recueil de formules, en plus de vos autres formules. Vous pouvez appliquer un poison de blessure que vous tenez sur une arme que vous maniez par une action unique, plutôt que par une activité à 2 actions et vous pouvez changer les DD de vos poisons imprégnés jusqu'à votre DD de classe s'il est plus élevé.</p>
 h2 class="title">Découverte de domaine de recherche<span style="float: right;">Niveau 5</span></h2>
 <p>Lorsque vous utilisez alchimie avancée pour fabriquer des poisons durant vos préparatifs quotidiens, vous pouvez dépenser un lot de réactifs pour créer trois poisons de n'importe quelle sorte, au lieu de deux poisons de même sorte seulement.</p>
-<h2 class="title">Infusion perpétuelle<span style="float: right;">Niveau 7</span></h2>
+<h2>Infusion perpétuelle<span style="float: right;">Niveau 7</span></h2>
 <p>Choisissez deux poisons courants de niveau 1.</p>
-<h2 class="title">Puissance perpétuelle<span style="float: right;">Niveau 11</span></h2>
+<h2>Puissance perpétuelle<span style="float: right;">Niveau 11</span></h2>
 <p><strong>Choisissez deux poisons courants de niveau 5 ou inférieur.</p>
-<h2 class="title">Découverte de domaine de recherche supérieur<span style="float: right;">Niveau 15</span></h2>
+<h2>Découverte de domaine de recherche supérieur<span style="float: right;">Niveau 15</span></h2>
 <p>Vous pouvez appliquer deux poisons de blessure différents sur la même arme, mais pas sur une munition. Les deux poisons doivent être de six niveaux plus faibles que votre niveau et vous ne pouvez utiliser les poisons concoctés en utilisant un lot de réactifs imprégnés par Infusions pérpétuelles. Appliquer les deux poisons nécessite une action séparée pour apposer chacun des poisons.</p>
 <p>Une fois accompli, vous combinez les deux poisons sur l'arme en un poison double avec le DD le plus faible des deux. Ce poison double est virulent seulement si les deux poisons qui le composent étaient virulents et si les poisons ont un nombre différent de stades, le poison double possède un nombre de stades égal à celui du poison avec le plus faible nombre de stades. La cible subit les effets des deux poisons à son stade actuel.</p>
-<h2 class="title">Perfection perpétuelle<span style="float: right;">Niveau 17</span></h2>
+<h2>Perfection perpétuelle<span style="float: right;">Niveau 17</span></h2>
 <p>Choisissez deux poisons alchimiques courants de niveau 11 ou inférieurs.</p>
