--- a/data/classfeatures/alchemist-13-1BKdOJ0HNL6Eg3xw.htm
+++ b/data/classfeatures/alchemist-13-1BKdOJ0HNL6Eg3xw.htm
@@ -1,7 +1,6 @@
 Name: Greater Field Discovery (Mutagenist)
 Nom: Découverte de domaine de recherche supérieure (Mutagèniste)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>If you imbibe another mutagen while you are under the effects of a mutagen, you can gain the benefits and the drawbacks of both mutagens at once, despite the fact that they both have the polymorph trait and would not normally function together. If you come under the effects of any further mutagens while benefiting from two mutagens, you lose the benefit of one of the former mutagens of your choice, while retaining the drawbacks of all the mutagens. If you are under the effects of two mutagens and you come under the effect of a non-mutagen polymorph effect, you lose the benefits of the mutagens while retaining the drawbacks of both.</p>
