--- a/data/classfeatures/alchemist-19-FiVYuIPTBzPzNP4E.htm
+++ b/data/classfeatures/alchemist-19-FiVYuIPTBzPzNP4E.htm
@@ -1,8 +1,8 @@
 Name: Alchemist Armor Mastery (Level 19)
-Nom: 
-État: auto-trad
+Nom: Maîtrise d'armure de l'alchimiste (Niveau 19)
+État: libre
 
 ------ Description (en) ------
 <p>Your skill with light and medium armor improves, increasing your ability to dodge blows. Your proficiency ranks for medium armor, light armor and unarmored defense increase to master.</p>
 ------ Description (fr) ------
-<p>Votre compétence en armure légère et moyenne s'améliore, augmentant votre capacité à esquiver les coups. Vos rangs de compétence pour les armures moyennes, les armures légères et la défense sans armure passent à maître.</p>
+<p>Votre compétence avec les armures légères et intermédiaires s'améliore, augmentant votre capacité à esquiver les coups. Votre rangs de maîtrise avec les armures intermédiaires, les armures légères et la défense sans armure passe à maître.</p>
