--- a/data/spells/necromancy-04-S1Msrwi990FE7uMO.htm
+++ b/data/spells/necromancy-04-S1Msrwi990FE7uMO.htm
@@ -1,6 +1,6 @@
 Name: Call The Blood
-Nom: 
-État: auto-trad
+Nom: Appel du sang
+État: libre
 
 ------ Description (en) ------
 <p>With a word and gesture, you cause streams of blood to erupt from the target’s mouth, nostrils, ears, or other facial openings and come rushing into your mouth. You deal [[/r 8d4 #negative]] negative damage to the target.</p>
@@ -9,6 +9,6 @@ Nom:
 <p><strong>Heightened (+1)</strong> The damage increases by [[/r 2d4 #negative]].</p>
 ------ Description (fr) ------
 <p>D'un mot et d'un geste, vous faites jaillir des flots de sang de la bouche, des narines, des oreilles ou d'autres orifices faciaux de la cible, qui se précipitent dans votre bouche. Vous infligez [[/r 8d4 #négatif]] dégâts négatifs à la cible.</p>
-<p>Si la cible subit des dégâts, son sang s'écoule dans votre bouche. Si vous êtes une créature vivante et que vous n'avez pas de soins négatifs, vous êtes @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{malade 2}. Si vous êtes mort-vivant (ou vivant mais que vous bénéficiez de soins négatifs), vous pouvez choisir soit de gagner des points de vie temporaires égaux à la moitié des dégâts négatifs subis par la cible (après avoir appliqué la résistance et autres) et devenir @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Rapide} pendant 1 round, soit de renoncer aux points de vie temporaires et devenir rapide pendant 1 minute. Vous pouvez utiliser cette action supplémentaire uniquement pour faire un pas, une foulée ou une frappe. Vous perdez les points de vie temporaires restants au bout d'une minute.</p>
+<p>Si la cible subit des dégâts, son sang s'écoule dans votre bouche. Si vous êtes une créature vivante et que vous n'avez pas soins négatifs, vous êtes @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 2. Si vous êtes mort-vivant (ou vivant mais que vous bénéficiez de soins négatifs), vous pouvez choisir entre gagner des points de vie temporaires égaux à la moitié des dégâts négatifs subis par la cible (après avoir appliqué la résistance et autres) et devenir @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Accéléré} pendant 1 round ou de renoncer aux points de vie temporaires et être Accéléré pendant 1 minute. Vous pouvez utiliser cette action supplémentaire uniquement pour Faire un pas, Marcher rapidement ou Frapper. Vous perdez les points de vie temporaires éventuellement restants au bout d'une minute.</p>
 <hr />
-<p><strong>Accentué (+1)</strong> Les dégâts augmentent de [[/r 2d4 #négatif]].</p>
+<p><strong>Intensifié (+1)</strong> Les dégâts augmentent de [[/r 2d4 #négatif]].</p>
