--- a/data/equipment/consumable-04-SWqzv0hYCIczICeR.htm
+++ b/data/equipment/consumable-04-SWqzv0hYCIczICeR.htm
@@ -1,12 +1,15 @@
 Name: Trip Snare
-Nom: 
-État: auto-trad
+Nom: Piège Trébucheur
+État: Libre
 
 ------ Description (en) ------
 <p><span>You set a cunning wire to trip a creature. A Medium or smaller creature that enters this snare's square must attempt a DC 20 Reflex save. <br /></span></p>
 <p><span>If you want to create a trip snare to trip a larger creature, you must create a group of contiguous snares of a length equal to the edge of that larger creature's space, and the creature must be moving such that it moves into the full set of snares. For example, three trip snares in a 15-foot-line can trip a Huge creature coming down a corridor into the line of snares. <br /></span></p>
 <p><span><strong>Critical Success</strong> The creature is unaffected.<br /><strong>Success</strong> The creature is flat-footed until the start of its next turn.<br /><strong>Failure</strong> The creature falls prone.<br /><strong>Critical Failure</strong> The creature falls prone and takes 1d6 bludgeoning damage.</span></p>
 ------ Description (fr) ------
-<p><span>Vous posez un fil astucieux pour faire trébucher une créature. Une créature de taille moyenne ou plus petite qui entre dans le carré de ce piège doit tenter une sauvegarde par réflexe DC 20. <br /></span></p>
-<p><span>Si vous voulez créer un piège à déclenchement pour faire trébucher une créature plus grande, vous devez créer un groupe de pièges contigus d’une longueur égale au bord de l’espace de cette créature plus grande, et la créature doit se déplacer de telle sorte qu’elle se déplace dans l’ensemble des pièges. Par exemple, trois collets de déclenchement dans une ligne de 15 pieds peuvent faire trébucher une créature Énorme qui descend un couloir dans la ligne de collets. <br /></span></p>
-<p><span><strong>Succès critique</strong> La créature n'est pas affectée.<br /><strong>Succès</strong> La créature a les pieds plats jusqu'au début de son prochain tour. <br /><strong>Échec</strong> La créature tombe à plat ventre.<br /><strong>Échec critique</strong> La créature tombe à plat ventre et subit 1d6 dégâts de matraquage.</span></p>
+<p><span>Vous posez un fil de manière astucieuse pour faire trébucher une créature. Une créature de taille moyenne ou plus petite qui entre dans la case de ce piège doit tenter un jet de sauvegarde Réflexe DD 20. <br /></span></p>
+<p><span>Si vous voulez créer un piège à déclenchement pour faire trébucher une créature plus grande, vous devez créer un groupe de pièges contigus d’une longueur égale à la largeur de l’espace de cette créature plus grande, et la créature doit se déplacer de telle sorte qu’elle se déplace dans l’ensemble des pièges. Par exemple, trois collets de déclenchement dans une ligne de 4,5 mètres peuvent faire trébucher une créature Très Grande qui descend un couloir dans la ligne de collets. <br /></span></p>
+<p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
+<p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} jusqu'au début de son prochain tour. </p>
+<p><strong>Échec</strong> La créature tombe @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{A terre}.</p>
+<p><strong>Échec critique</strong> La créature tombe à terre et subit 1d6 dégâts contondants.</p>
