capacités de barbare

--- a/data/classfeatures/barbarian-01-0FtzFbUrN56KA67z.htm
+++ b/data/classfeatures/barbarian-01-0FtzFbUrN56KA67z.htm
@@ -1,6 +1,6 @@
 Name: Animal Instinct
 Nom: Instinct animal
-État: officielle
+État: libre
 
 ------ Description (en) ------
 <p>The fury of a wild predator fills you when you Rage, granting you ferocious unarmed attacks. Cultures that revere vicious animals (such as apes or bears) give rise to barbarians with this instinct. You might also be at war with an uncontrollable, animalistic side of your personality, or you might be a descendant of a werewolf or another werecreature. Select an animal from Table 3-3: Animal Instincts that best matches your chosen animal.</p>
@@ -127,7 +127,7 @@ Nom: Instinct animal
 <td style="height: 17px; width: 157px;">Pousser, mains nues</td>
 </tr>
 <tr style="height: 17px;">
-<td style="height: 17px; width: 64px;" rowspan="2">Chat</td>
+<td style="height: 17px; width: 64px;" rowspan="2">Félin</td>
 <td style="height: 17px; width: 60px;">Mâchoires</td>
 <td style="height: 17px; width: 74px;">1d10 P</td>
 <td style="height: 17px; width: 157px;">Mains nues</td>
