--- a/data/classfeatures/barbarian-01-SCYSjUbMmw8JD9P9.htm
+++ b/data/classfeatures/barbarian-01-SCYSjUbMmw8JD9P9.htm
@@ -1,7 +1,6 @@
 Name: Superstition Instinct
 Nom: Instinct superstitieux
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>A deep distrust of magic drives you to forgo and counter the metaphysical nonsense of spellcasters. Whether you're a member of a superstitious family or culture that distrusts magic, a warrior in constant battle against wizards and witches, a survivor of a magical accident that instilled an intense aversion in your mind and body, or a scion of a bloodline known for its magic resistance, your rage is inimical to magic.</p>
@@ -15,10 +14,10 @@ Nom: Instinct superstitieux
 <h2>Raging Resistance 9th</h2>
 <p>Choose two associated magical traditions: arcane and occult, arcane and primal, divine and occult, or divine and primal. The resistance from your raging resistance class feature applies against all damage you take from spells cast with these two traditions of magic, regardless of the type of damage dealt by the spell.</p>
 ------ Description (fr) ------
-<p>Une profonde méfiance à l'égard de la magie vous a conduit à vous priver et à contrer le non sens métaphysique des lanceurs de sorts. Que vous soyez membre d'une famille superstitieuse ou d'une culture qui se ne croit pas en la magie, un combattant en constant conflit contre des magiciens et des sorcières, le survivant d'un accident magique qui a instillé dans votre esprit et dans votre corps une profonde aversion pour la magie ou encore, l'enfant d'une lignée connue pour sa résistance à la magie, votre rage se montre hostile à la magie.</p>
+<p>Une profonde méfiance à l'égard de la magie vous a conduit à vous priver et à contrer le non sens métaphysique des lanceurs de sorts. Que vous soyez membre d'une famille superstitieuse ou d'une culture qui ne croit pas en la magie, un combattant en constant conflit contre des magiciens et des sorcières, le survivant d'un accident magique qui a instillé dans votre esprit et dans votre corps une profonde aversion pour la magie ou bien encore l'enfant d'une lignée connue pour sa résistance à la magie, votre rage se montre hostile à la magie.</p>
 <p>Cela fait de vous un excellent chasseur de mages lent à faire confiance aux pratiquants des arts magiques. Votre anathème extrêmement restrictif vous accorde des pouvoirs qui vont au-delà des autres instincts.</p>
 <h2>Anathème</h2>
-<p>Accepter de plein gré les effets des sorts magiques (y compris de parchemins, de bâton et consorts), même de la part de vos alliés est un acte anathème de votre instinct. Vous pouvez néanmoins toujours boire des potions, investir et activer la plupart des objets magiques que vous trouvez et ce, bien que les objets qui lancent des sorts soient sujets aux mêmes restrictions que celle qui s'appliquent aux autres sorts. Si un allié insiste  pour utiliser la magie sur vous en dépît de votre refus et que vous n'avez aucune raison de croire qu'il va s'arrêter, continuer à voyager avec cet allié de votre propre gré est considéré comme accepter ses sorts (comme ce serait le cas de circonstances similaires) et également considéré comme un anathème à votre instinct.</p>
+<p>Accepter de plein gré les effets des sorts magiques (y compris de parchemins, de bâton et consorts), même de la part de vos alliés est un acte anathème de votre instinct. Vous pouvez néanmoins toujours boire des potions, investir et activer la plupart des objets magiques que vous trouvez et ce, bien que les objets qui lancent des sorts soient sujets aux mêmes restrictions que celles qui s'appliquent aux autres sorts. Si un allié insiste  pour utiliser la magie sur vous en dépît de votre refus et que vous n'avez aucune raison de croire qu'il va s'arrêter, continuer à voyager avec cet allié de votre propre gré est considéré comme accepter ses sorts (comme ce serait le cas de circonstances similaires) et également considéré comme un anathème à votre instinct.</p>
 <h2>Résilience superstitieuse (pouvoir d'instinct)</h2>
 <p>Lorsque vous êtes en rage, vous obtenez un bonus de statut de +2 à tous les jets de sauvegarde contre la magie. Augmentez les dégâts de votre Rage de 2 à 4 contre des créatures qui peuvent lancer des sorts. Une fois toutes les 10 minutes, lorsque vous êtes en Rage, vous regagnez des Points de Vie égaux aux points de vie temporaires que vous obtenez par l'action de Rage.</p>
 <h2>Pouvoir de spécialisation (7e)</h2>
