--- a/data/classfeatures/barbarian-01-TQqv9Q5mB4PW6LH9.htm
+++ b/data/classfeatures/barbarian-01-TQqv9Q5mB4PW6LH9.htm
@@ -1,7 +1,6 @@
 Name: Spirit Instinct
 Nom: Instinct spirituel
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Whether you are emotionally sensitive to the spirits around you; worship ancestors or apparitions; or are haunted by the specter of an ancestor, relative, friend, or foe, your rage takes the form of a spiritual possession.</p>
@@ -14,12 +13,12 @@ Nom: Instinct spirituel
 <h2>Raging Resistance</h2>
 <p>You resist negative damage, as well as damage dealt by the attacks and abilities of undead creatures, regardless of the damage type.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Vous êtes peut-être sensible aux esprits qui vous entourent, vénérez vos ancêtres ou les apparitions, ou êtes hanté par le spectre d’un ancêtre, d’un parent, d’un ami ou d’un ennemi, et votre rage se manifeste par une possession spirituelle.</span></p>
-<h2 class="title">Anathème</h2>
+<p>>Que vous soyez sensible aux esprits qui vous entourent, vénériez vos ancêtres ou les apparitions, ou soyez hanté par le spectre d’un ancêtre, d’un parent, d’un ami ou d’un ennemi, votre rage prend la forme d'une possession spirituelle.</p>
+<h2>Anathème</h2>
 <p>Manquer de respect aux cadavres ou aux esprits est anathème à votre instinct. Vous défendre contre les créatures mortes-vivantes ne l’est pas.</p>
-<h2 class="title">Rage spirituelle (pouvoir d’instinct)</h2>
-<p>Quand vous êtes enragé, vous pouvez passer vos dégâts de Rage de 2 à 3 et infliger des dégâts négatifs ou positifs au lieu du type de dégâts normalement infligés par votre arme ou votre attaque à mains nues (vous choisissez l’option que vous préférez à chaque fois que vous entrez en Rage). Si vous choisissez d’infliger des dégâts négatifs ou positifs, votre arme ou votre attaque à mains nues gagne l’effet de la rune de propriété spectrale. Vous êtes alors plus efficace contre les créatures intangibles et vos actions de Rage gagnent les traits divine et nécromancie, ainsi que négative ou positive en fonction de votre choix.</p>
-<h2 class="title">Pouvoir de spécialisation</h2>
+<h2>Rage spirituelle (pouvoir d’instinct)</h2>
+<p>Quand vous êtes enragé, vous pouvez passer vos dégâts de Rage de 2 à 3 et infliger des dégâts négatifs ou positifs au lieu du type de dégâts normalement infligés par votre arme ou votre attaque à mains nues (vous choisissez l’option que vous préférez à chaque fois que vous entrez en Rage). Si vous choisissez d’infliger des dégâts négatifs ou positifs, votre arme ou votre attaque à mains nues gagne l’effet de la rune de propriété spectrale. Vous êtes alors plus efficace contre les créatures intangibles et vos actions de Rage gagnent les traits divin et nécromancie, ainsi que négatif ou positif en fonction de votre choix.</p>
+<h2>Pouvoir de spécialisation</h2>
 <p>Quand vous utilisez votre rage spirituelle, vous faites passer les dégâts supplémentaires de Rage de 3 à 7. Si vous possédez la spécialisation martiale supérieure et que vous utilisez la rage spirituelle, vous passez à la place les dégâts supplémentaires de Rage à 13</p>
-<h2 class="title">Résistance enragée</h2>
-<p>Vous êtes résistant aux dégâts négatifs, ainsi qu’à tous les types de dégâts infligés par les attaques et pouvoirs des créatures mortes-vivantes.&nbsp;</p>
+<h2>Résistance enragée</h2>
+<p>Vous êtes résistant aux dégâts négatifs, ainsi qu’à tous les types de dégâts infligés par les attaques et pouvoirs des créatures mortes-vivantes.</p>
