--- a/data/classfeatures/barbarian-01-VDot7CDcXElxmkkz.htm
+++ b/data/classfeatures/barbarian-01-VDot7CDcXElxmkkz.htm
@@ -1,7 +1,6 @@
 Name: Dragon Instinct
 Nom: Instinct du dragon
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You summon the fury of a mighty dragon and manifest incredible abilities. Perhaps your culture reveres draconic majesty, or you gained your connection by drinking or bathing in dragon's blood or after watching a marauding wyrm burn your village. Select a type of dragon from Table 3-4: Dragon Instincts to be your instinct's dragon type. Chromatic dragons tend to be evil, and metallic dragons tend to be good.</p>
@@ -74,8 +73,9 @@ Nom: Instinct du dragon
 <h2 class="title">Raging Resistance</h2>
 <p>You resist piercing damage and the damage type of your dragon's breath weapon.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Vous invoquez la furie d’un terrible dragon, qui se manifeste par des pouvoirs incroyables. Vous venez peut-être d’une culture qui se prosterne devant la majesté des dragons, ou avez créé un lien avec eux en buvant du sang de dragon ou en vous y baignant, ou encore en assistant à la combustion de votre village par un dracosire en maraude. Sélectionnez dans le tableau 3–4 : Les instincts de dragons un type de dragon dont vous adopterez l’instinct. Les dragons chromatiques sont généralement mauvais et les dragons métalliques sont plutôt bons.</span></p>
-<h2>TABLEAU 3–4 : LES INSTINCTS DE DRAGONS</h2>
+<p>>Vous invoquez la furie d’un terrible dragon, qui se manifeste par des pouvoirs incroyables. Vous venez peut-être d’une culture qui se prosterne devant la majesté des dragons ou avez créé un lien avec eux en buvant du sang de dragon ou en vous y baignant ou encore en assistant à la combustion de votre village par un dracosire en maraude.</p>
+<p>Sélectionnez dans le tableau Des instincts de dragons un type de dragon dont vous adoptez l’instinct. Les dragons chromatiques sont généralement mauvais et les dragons métalliques sont plutôt bons.</p>
+<h2>Tableau des instincts de dragons</h2>
 <table style="height: 187px;" border="1">
 <tbody>
 <tr style="height: 17px;">
@@ -135,11 +135,11 @@ Nom: Instinct du dragon
 </tr>
 </tbody>
 </table>
-<h2 class="title"> Anathème </h2>
+<h2>Anathème </h2>
 <p> Laisser passer une insulte personnelle est anathème à votre instinct. Vous décidez si votre personnage respecte ou déteste votre type de dragon. Si vous le respectez, défier un tel dragon est un anathème et, si vous le détestez, ne pas réussir à vaincre un tel dragon que vous croisez est un anathème.</p>
-<h2 class="title"> Rage draconique (pouvoir d’instinct) </h2>
-<p> Quand vous êtes enragé, vous pouvez faire passer les dégâts supplémentaires de Rage de 2 à 4 et faire en sorte que ces dégâts soient du même type que ceux du souffle de votre dragon au lieu de correspondre au type de dégâts de votre arme ou de votre attaque à mains nues. Si vous faites cela, votre action de Rage gagne les traits arcanique et évocation, ainsi que le trait correspondant au type de dégâts infligés. </p>
-<h2 class="title"> Pouvoir de spécialisation </h2>
-<p> Quand vous utilisez votre rage draconique, vous faites passer les dégâts supplémentaires de Rage de 4 à 8. Si vous possédez la spécialisation martiale supérieure, vous faites passer les dégâts supplémentaires de Rage de 8 à 16 quand vous utilisez votre rage draconique.</p>
-<h2 class="title"> Résistance enragée </h2>
-<p> Vous êtes résistant aux dégâts perforants et au type de dégâts infligés par le souffle de votre dragon.</p>
+<h2>Rage draconique (pouvoir d’instinct) </h2>
+<p>Quand vous êtes enragé, vous pouvez faire passer les dégâts supplémentaires de Rage de 2 à 4 et faire en sorte que ces dégâts soient du même type que ceux du souffle de votre dragon au lieu de correspondre au type de dégâts de votre arme ou de votre attaque à mains nues. Si vous faites cela, votre action de Rage gagne les traits arcanique et évocation, ainsi que le trait correspondant au type de dégâts infligés. </p>
+<h2>Pouvoir de spécialisation</h2>
+<p>Quand vous utilisez votre rage draconique, vous faites passer les dégâts supplémentaires de Rage de 4 à 8. Si vous possédez la spécialisation martiale supérieure, vous faites passer les dégâts supplémentaires de Rage de 8 à 16 quand vous utilisez votre rage draconique.</p>
+<h2>Résistance enragée </h2>
+<p>Vous êtes résistant aux dégâts perforants et au type de dégâts infligés par le souffle correspondant à votre type de dragon.</p>
