--- a/data/equipment/consumable-04-nn2HAN1XKkKHfVnM.htm
+++ b/data/equipment/consumable-04-nn2HAN1XKkKHfVnM.htm
@@ -1,6 +1,6 @@
 Name: Stupor Poison
-Nom: 
-État: auto-trad
+Nom: Poison de Stupeur
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">2</span> Interact</p>
@@ -14,11 +14,11 @@ Nom:
 <p><strong>Stage 4</strong> unconscious with no Perception check to wake up ([[/r 1d6 #hours]] hours)</p>
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">2</span> Interagir</p>
-<p>Le poison de stupeur est une distillation plus puissante du @Compendium[pf2e.equipment-srd.zo0ophqfKunJFxZN]{poison de léthargie}. Une nouvelle exposition au poison de stupeur ne nécessite pas que la cible tente des jets de sauvegarde supplémentaires ; seul l'échec d'un jet de sauvegarde contre une exposition en cours peut faire progresser son stade.</p>
+<p>Le poison de stupeur est une distillation plus puissante du @Compendium[pf2e.equipment-srd.zo0ophqfKunJFxZN]{Poison de léthargie}. Une exposition subséquente au poison de stupeur ne nécessite pas que la cible tente des jets de sauvegarde supplémentaires ; seul l'échec d'un jet de sauvegarde contre une exposition en cours peut faire progresser son stade.</p>
 <hr />
 <p><strong>Jet de sauvegarde</strong> DC 20 Fortitude;</p>
 <p><strong>Durée maximale</strong> 6 heures;</p>
-<p><strong>Phase 1</strong> @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Soufflé 1} et @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pieds plats} (1 round);</p>
-<p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Soufflé 2} et Pieds plats (1 round);</p>
+<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralenti} 1 et @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} (1 round);</p>
+<p><strong>Stade 2</strong> Ralenti 2 et Pris au dépourvu (1 round);</p>
 <p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{Inconscient} sans test de Perception pour se réveiller (1 round);</p>
-<p><strong>Stade 4</strong> inconscient sans test de Perception pour se réveiller ([[/r 1d6 #hours]] heures)</p>
+<p><strong>Stade 4</strong> Inconscient sans test de Perception pour se réveiller ([[/r 1d6 #hours]] heures)</p>
