capacités de barbare

--- a/data/classfeatures/barbarian-11-88Q33X2a0iYPkbzd.htm
+++ b/data/classfeatures/barbarian-11-88Q33X2a0iYPkbzd.htm
@@ -1,7 +1,6 @@
 Name: Mighty Rage
 Nom: Rage formidable
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your rage intensifies and lets you burst into action. Your proficiency rank for your barbarian class DC increases to expert.</p>
