--- a/data/classfeatures/barbarian-09-ie6xDX9GMEcA2Iuq.htm
+++ b/data/classfeatures/barbarian-09-ie6xDX9GMEcA2Iuq.htm
@@ -1,10 +1,9 @@
 Name: Raging Resistance
 Nom: Résistance enragée
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Repeated exposure and toughened skin allow you to fend off harm. While raging, you gain resistance equal to 3 + your Constitution modifier to damage types based on your instinct.<br /></p>
 <p>See specific instincts for more information.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">La vie en plein air et votre cuir épais vous permettent de mieux vous prémunir des dégâts. Quand vous êtes enragé, vous gagnez une résistance égale à 3 + votre modificateur de Constitution face au type de dégâts lié à votre instinct.&nbsp;</span></p>
+<p>La vie en plein air et votre cuir épais vous permettent de mieux vous prémunir des dégâts. Quand vous êtes enragé, vous gagnez une résistance égale à 3 + votre modificateur de Constitution face au type de dégâts lié à votre instinct.</p>
