--- a/data/classfeatures/barbarian-15-BZnqKnqKVImjSIFE.htm
+++ b/data/classfeatures/barbarian-15-BZnqKnqKVImjSIFE.htm
@@ -1,9 +1,8 @@
 Name: Indomitable Will
 Nom: Volonté indomptable
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your rage makes it difficult to control you. Your proficiency rank for Will saves increases to master. When you roll a success on a Will save, you get a critical success instead.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Votre rage vous rend difficile à contrôler. Votre rang de maîtrise pour les jets de Volonté passe à maître. Quand vous obtenez un succès à un jet de Volonté, celui-ci est transformé en succès critique.&nbsp;</span></p>
+<p>Votre rage vous rend difficile à contrôler. Votre rang de maîtrise pour les jets de Volonté passe à maître. Quand vous obtenez un succès à un jet de Volonté, celui-ci est transformé en succès critique.</p>
