--- a/data/equipment/consumable-05-JgZIWU1KaVL2pnAr.htm
+++ b/data/equipment/consumable-05-JgZIWU1KaVL2pnAr.htm
@@ -1,6 +1,6 @@
 Name: Fungal Walk Musk
-Nom: 
-État: auto-trad
+Nom: Onguent de Musc fongique
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -9,4 +9,4 @@ Nom:
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <hr />
-<p>Cet onguent malodorant atténue les odeurs et les traces que les créatures fongiques détectent. Pendant un jour après que vous vous soyez enduit de ce musc, les créatures fongiques subissent un malus de -4 aux tests de Perception pour vous chercher ou vous remarquer. Si une créature fongique est sans esprit, elle subit à la place une pénalité de -6. Le musc vous confère également un bonus de +1 à la CA contre les attaques de mêlée des créatures fongiques sans vision pendant la même période. Les effets du musc de marche fongique prennent fin immédiatement si vous êtes immergé dans l'eau ou soumis à un autre effet olfactif.</p>
+<p>Cet onguent malodorant atténue les odeurs et les traces que les créatures fongiques détectent. Pendant un jour après que vous vous soyez enduit de ce musc, les créatures fongiques subissent un malus de -4 aux tests de Perception pour vous chercher ou vous remarquer. Si une créature fongique est sans intelligence, elle subit à la place une pénalité de -6. Le musc vous confère également un bonus de +1 à la CA contre les attaques de mêlée des créatures fongiques sans vision pendant la même période. Les effets de l'onguent de Musc fongique prennent fin immédiatement si vous êtes immergé dans l'eau ou soumis à un autre effet olfactif.</p>
