--- a/data/equipment/consumable-05-GNy0YEusxjcGMCNn.htm
+++ b/data/equipment/consumable-05-GNy0YEusxjcGMCNn.htm
@@ -1,8 +1,8 @@
 Name: Green Wyrmling Breath Potion
-Nom: 
-État: auto-trad
+Nom: Potion de Souffle de bébé dragon vert
+État: libre
 
 ------ Description (en) ------
 <p>This liquid contains blood from a wyrmling green dragon. For 1 hour after you drink it, you can unleash a cloud of poison as a breath weapon. Exhaling dragon breath uses a single action. The breath weapon deals [[/r 2d6 # poison]] poison damage in a 15-foot cone, and each creature in the area must attempt a DC 23 basic Fortitude save. After you use the breath weapon, you can’t do so again for [[/r 1d4]] rounds.</p>
 ------ Description (fr) ------
-<p>Ce liquide contient le sang d'un dragon vert wyrmling. Pendant 1 heure après l'avoir bu, vous pouvez libérer un nuage de poison comme arme respiratoire. Expirer un souffle de dragon nécessite une action simple. L'arme à souffle inflige [[/r 2d6 # poison]] dégâts de poison dans un cône de 15 pieds, et chaque créature dans la zone doit tenter une sauvegarde de base en Force de 23. Après avoir utilisé l'arme du souffle, vous ne pouvez plus le faire pendant [[/r 1d4]] rounds.</p>
+<p>Ce liquide contient le sang d'un bébé dragon vert. Pendant 1 heure après l'avoir bu, vous pouvez libérer un nuage de poison en attaque de souffle. Expirer un souffle de dragon nécessite une action simple. L'attaque inflige [[/r 2d6 # poison]] points de dégâts de poison dans un cône de 4,5 mètres, et chaque créature dans la zone doit tenter un Jet de sauvegarde Vigueur DD 23. Après avoir utilisé le souffle, vous ne pouvez plus le faire pendant [[/r 1d4]] rounds.</p>
