--- a/data/equipment/consumable-06-MbPboT76BBKVGepB.htm
+++ b/data/equipment/consumable-06-MbPboT76BBKVGepB.htm
@@ -13,6 +13,6 @@ Nom:
 <p>Vous positionnez des substances particulièrement nauséabondes pour éclabousser une créature. La première créature à pénétrer dans le carré doit tenter un jet de sauvegarde de Force DC 20.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
-<p><strong>Succès</strong> La créature devient @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Sickened} 1.</p>
-<p><strong>Échec</strong> La créature devient malade 2.</p>
-<p><strong>Échec critique</strong> La créature tombe malade 3.</p>
+<p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1.</p>
+<p><strong>Échec</strong> La créature est Malade 2.</p>
+<p><strong>Échec critique</strong> La créature est Malade 3.</p>
