--- a/data/equipment/consumable-06-MbPboT76BBKVGepB.htm
+++ b/data/equipment/consumable-06-MbPboT76BBKVGepB.htm
@@ -1,6 +1,6 @@
 Name: Nauseating Snare
-Nom: 
-État: auto-trad
+Nom: Piège maladif
+État: libre
 
 ------ Description (en) ------
 <p>You position particularly foul substances to splash over a creature. The first creature to enter the square must attempt a DC 20 Fortitude saving throw.</p>
@@ -10,7 +10,7 @@ Nom:
 <p><strong>Failure</strong> The creature becomes sickened 2.</p>
 <p><strong>Critical Failure</strong> The creature becomes sickened 3.</p>
 ------ Description (fr) ------
-<p>Vous positionnez des substances particulièrement nauséabondes pour éclabousser une créature. La première créature à pénétrer dans le carré doit tenter un jet de sauvegarde de Force DC 20.</p>
+<p>Vous fabiquez un piège à l'aide de substances particulièrement nauséabondes pour éclabousser une créature. La première créature à pénétrer dans la case du piège doit tenter un jet de sauvegarde Vigueur DD 20.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1.</p>
