--- a/data/equipment/consumable-05-GNy0YEusxjcGMCNn.htm
+++ b/data/equipment/consumable-05-GNy0YEusxjcGMCNn.htm
@@ -1,5 +1,5 @@
 Name: Green Wyrmling Breath Potion
-Nom: Potion de Souffle de bébé dragon vert
+Nom: Potion de Souffle de dragonnet vert
 État: libre
 
 ------ Description (en) ------
