capacités de champion

--- a/data/classes/x8iwnpdLbfcoZkHA.htm
+++ b/data/classes/x8iwnpdLbfcoZkHA.htm
@@ -402,12 +402,12 @@ Nom: Champion
 <h2>Allié divin<span style="float: right;">Niveau 3</span></h2>
 <p>Votre dévotion attire un esprit dont l’alignement est identique à celui de votre divinité. Une fois le choix de cet allié effectué, vous ne pouvez plus en changer.</p>
 <p>Les alliés divins sont les suivants :</p>
-<p><strong>Allié lame</strong> : un esprit guerrier réside dans votre arsenal. Lorsque vous faites vos préparatifs quotidiens, choisissez une arme ou des @Compendium[pf2e.equipment-srd.FNDq4NFSN0g2HKWO]{bandelettes de coups puissants}. Entre vos mains, cet objet gagne les effets d’une rune de propriété.</p>
+<p><strong>Allié bouclier</strong> un esprit protecteur se loge dans votre bouclier. Entre vos mains, la Solidité du bouclier augmente de 2 et ses PV et son SR augmentent de moitié.</p>
+<p><strong>Allié destrier</strong> Vous obtenez un jeune compagnon animal qui vous sert de monture. Normalement, votre compagnon animal doit avoir le pouvoir spécial monture, comme un cheval par exemple. Vous pouvez choisir un compagnon animal différent (à l’appréciation du MJ) mais cette capacité ne lui confère toutefois pas le pouvoir spécial monture.</p>
+<p><strong>Allié lame</strong> un esprit guerrier réside dans votre arsenal. Lorsque vous faites vos préparatifs quotidiens, choisissez une arme ou des @Compendium[pf2e.equipment-srd.FNDq4NFSN0g2HKWO]{bandelettes de coups puissants}. Entre vos mains, cet objet gagne les effets d’une rune de propriété.</p>
 <p>Pour un champion qui suit les principes du bien, choisissez entre @Compendium[pf2e.equipment-srd.LwQb7ryTC8FlOXgX]{perturbatrice}, @Compendium[pf2e.equipment-srd.JQdwHECogcTzdd8R]{spectrale}, @Compendium[pf2e.equipment-srd.qlunQzfnzPQpMG6U]{boomerang} ou @Compendium[pf2e.equipment-srd.roeYtwlIe65BPMJ1]{changeante}.</p>
 <p>Pour un champion qui suit les principes du mal, choisissez entre @Compendium[pf2e.equipment-srd.P6v2AtJw7AUwaDzf]{Effrayante}, @Compendium[pf2e.equipment-srd.qlunQzfnzPQpMG6U]{boomerang} ou @Compendium[pf2e.equipment-srd.roeYtwlIe65BPMJ1]{changeante}.</p>
 <p>Vous produisez également l’effet critique spécialisé de l’arme.</p>
-<p><strong>Allié bouclier</strong> : un esprit protecteur se loge dans votre bouclier. Entre vos mains, la Solidité du bouclier augmente de 2 et ses PV et son SR augmentent de moitié.</p>
-<p><strong>Allié destrier</strong> : Vous obtenez un jeune compagnon animal qui vous sert de monture. Normalement, votre compagnon animal doit avoir le pouvoir spécial monture, comme un cheval par exemple. Vous pouvez choisir un compagnon animal différent (à l’appréciation du MJ) mais cette capacité ne lui confère toutefois pas le pouvoir spécial monture.</p>
 <h2>Dons généraux<span style="float: right;">Niveau 3</span></h2>
 <p>Au niveau 3, puis tous les quatre niveaux, vous gagnez un don général.</p>
 <h2>Améliorations de compétence<span style="float: right;">Niveau 3</span></h2>
