--- a/data/classfeatures/champion-01-8YIA0jh64Ecz0TG6.htm
+++ b/data/classfeatures/champion-01-8YIA0jh64Ecz0TG6.htm
@@ -1,7 +1,6 @@
 Name: Desecrator
-Nom: Profanateur [Neutre mauvais]
-État: changé
-État d'origine: libre
+Nom: Profanateur
+État: libre
 
 ------ Description (en) ------
 <p>You always take what pleases you, no matter who it hurts, and you spread the influence of evil across all you touch. You gain the @Compendium[pf2e.actionspf2e.enQieRrITuEQZxx2]{Selfish Shield} champion's reaction and the @Compendium[pf2e.spells-srd.jFmWSIpJGGebim6y]{Touch of Corruption} devotion spell. After the tenets of evil, add this tenet.</p>
@@ -19,10 +18,11 @@ Nom: Profanateur [Neutre mauvais]
 <h2 class="title">Exalt<span style="float: right;">Level 11</span></h2>
 <p>When you use Selfish Shield, each enemy within 15 feet of you takes a -1 status penalty to attack rolls against you until the start of your next turn.</p>
 ------ Description (fr) ------
-<p>Vous avez toujours pris ce qui vous plaisait, quel que soit celui que çà a blessé et vous répandez l'influence du mal à tout ce que vous touchez. Vous obtenez la réaction de champion @Compendium[pf2e.actionspf2e.enQieRrITuEQZxx2]{Bouclier égoïste} et le sort de dévotion @Compendium[pf2e.spells-srd.jFmWSIpJGGebim6y]{Toucher de corruption}. Après les principes du mal, ajoutez ce principe.</p>
+<p>Vous avez toujours pris ce qui vous plaisait, quel que soit celui que çà a blessé et vous répandez l'influence du mal sur tout ce que vous touchez. Vous obtenez la réaction de champion @Compendium[pf2e.actionspf2e.enQieRrITuEQZxx2]{Bouclier égoïste} et le sort de dévotion @Compendium[pf2e.spells-srd.jFmWSIpJGGebim6y]{Toucher de corruption}.</p>
+<p>Après les principes du mal, ajoutez ce principe :</p>
 <p>• Minez ou corrompez tout ce qui se trouve de bon et de pur sur votre chemin et semez le doute parmi ceux qui poursuivent de tels idéaux.</p>
-<h2 class="title">Châtiment divin<span style="float: right;">Niveau 9</span></h2>
+<h2>Châtiment divin<span style="float: right;">Niveau 9</span></h2>
 <p>Votre réaction de champion s'améliore. Si votre modificateur de Charisme est de +2 ou supérieur, votre résistance contre les dégâts déclencheurs est égale à votre modificateur de Charisme + la moitié de votre niveau.</p>
-<h2 class="title">Exaltation<span style="float: right;">Niveau 11</span></h2>
+<h2>Exaltation<span style="float: right;">Niveau 11</span></h2>
 <p>Votre réaction de champion s'améliore de la manière suivante lorsque vous obtenez la capacité de classe exaltation au niveau 11. Cela affecte vos ennemis plutôt que vos alliés, lorsqu'ils exaltent votre divinité obscrure en apportant la douleur sur vos ennemis au lieu de peser sur vos compagnons.</p>
-<p>Lorsque vous utilisez Bouclier égoïste, chaque ennemi dans les 4,5 m de vous subit une pénalité de statut de –1 à ses jets d'attaque contre vous jusqu'au début de votre prochain tour.</p>
+<p>Lorsque vous utilisez Bouclier égoïste, chaque ennemi dans un rayon de 4,5 m de vous subit une pénalité de statut de –1 à ses jets d'attaque contre vous jusqu'au début de votre prochain tour.</p>
