--- a/data/classfeatures/champion-01-JiY2ZB4FkK8RJm4T.htm
+++ b/data/classfeatures/champion-01-JiY2ZB4FkK8RJm4T.htm
@@ -1,7 +1,6 @@
 Name: The Tenets of Evil
 Nom: Les principes du Mal
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>All champions of evil alignment follow these tenets.</p>
