--- a/data/classfeatures/champion-03-ERwuazupczhUSZ73.htm
+++ b/data/classfeatures/champion-03-ERwuazupczhUSZ73.htm
@@ -1,7 +1,6 @@
 Name: Divine Ally
 Nom: Allié divin
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your devotion attracts a spirit of your deity's alignment. Once you choose an ally, your choice can't be changed.<br /></p>
@@ -11,8 +10,11 @@ Nom: Allié divin
 <p><strong>Shield Ally</strong>: A spirit of protection dwells within your shield. In your hands, the shield's Hardness increases by 2 and its HP and BT increase by half.<br /></p>
 <p><strong>Steed Ally</strong>: You gain a young animal companion as a mount. Ordinarily, your animal companion is one that has the mount special ability, such as a horse. You can select a different animal companion (GM's discretion), but this ability doesn't grant it the mount special ability.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Votre dévotion attire un esprit dont l’alignement est identique à celui de votre divinité. Une fois le choix de cet allié effectué, vous ne pouvez plus en changer.<br></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput">Les alliés divins sont les suivants : <br></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Allié bouclier</strong> : Allié bouclier : un esprit protecteur se loge dans votre bouclier. Entre vos mains, la Solidité du bouclier augmente de 2 et ses PV et son SR augmentent de moitié. <br></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Allié destrier</strong> :  Vous obtenez un jeune compagnon animal qui vous sert de monture. Normalement, votre compagnon animal doit avoir le pouvoir spécial monture, comme un cheval par exemple. Vous pouvez choisir un compagnon animal différent (à l’appréciation du MJ) mais cette capacité ne lui confère toutefois pas le pouvoir spécial monture&nbsp;</span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Allié lame</strong> :  un esprit guerrier réside dans votre arsenal. Lorsque vous faites vos préparatifs quotidiens, choisissez une arme ou des @Compendium[pf2e.equipment-srd.FNDq4NFSN0g2HKWO]{bandelettes de coups puissants}. Entre vos mains, cet objet gagne les effets d’une rune de propriété. Pour un champion qui suit les principes du bien, choisissez entre <em>perturbatrice</em>, <em>spectrale</em>, <em>boomerang</em> ou <em>changeante</em>. Vous produisez également l’effet critique spécialisé de l’arme.</span></p>
+<p>Votre dévotion attire un esprit dont l’alignement est identique à celui de votre divinité. Une fois le choix de cet allié effectué, vous ne pouvez plus en changer.</p>
+<p>Les alliés divins sont les suivants :</p>
+<p><strong>Allié bouclier</strong> un esprit protecteur se loge dans votre bouclier. Entre vos mains, la Solidité du bouclier augmente de 2 et ses PV et son SR augmentent de moitié.</p>
+<p><strong>Allié destrier</strong> Vous obtenez un jeune compagnon animal qui vous sert de monture. Normalement, votre compagnon animal doit avoir le pouvoir spécial monture, comme un cheval par exemple. Vous pouvez choisir un compagnon animal différent (à l’appréciation du MJ) mais cette capacité ne lui confère toutefois pas le pouvoir spécial monture.</p>
+<p><strong>Allié lame</strong> un esprit guerrier réside dans votre arsenal. Lorsque vous faites vos préparatifs quotidiens, choisissez une arme ou des @Compendium[pf2e.equipment-srd.FNDq4NFSN0g2HKWO]{bandelettes de coups puissants}. Entre vos mains, cet objet gagne les effets d’une rune de propriété.</p>
+<p>Pour un champion qui suit les principes du bien, choisissez entre @Compendium[pf2e.equipment-srd.LwQb7ryTC8FlOXgX]{perturbatrice}, @Compendium[pf2e.equipment-srd.JQdwHECogcTzdd8R]{spectrale}, @Compendium[pf2e.equipment-srd.qlunQzfnzPQpMG6U]{boomerang} ou @Compendium[pf2e.equipment-srd.roeYtwlIe65BPMJ1]{changeante}.</p>
+<p>Pour un champion qui suit les principes du mal, choisissez entre @Compendium[pf2e.equipment-srd.P6v2AtJw7AUwaDzf]{Effrayante}, @Compendium[pf2e.equipment-srd.qlunQzfnzPQpMG6U]{boomerang} ou @Compendium[pf2e.equipment-srd.roeYtwlIe65BPMJ1]{changeante}.</p>
+<p>Vous produisez également l’effet critique spécialisé de l’arme.</p>
