--- a/data/classfeatures/champion-01-FCoMFUsth4xB4veC.htm
+++ b/data/classfeatures/champion-01-FCoMFUsth4xB4veC.htm
@@ -1,7 +1,6 @@
 Name: Liberator
-Nom: Libérateur [Chaotique Bon]
-État: changé
-État d'origine: officielle
+Nom: Libérateur
+État: officielle
 
 ------ Description (en) ------
 <p>You defend the freedom of others. You gain the Liberating Step champion's reaction and the @Compendium[pf2e.spells-srd.zNN9212H2FGfM7VS]{Lay on Hands} devotion spell. After the tenets of good, add these tenets:</p>
@@ -24,12 +23,12 @@ Nom: Libérateur [Chaotique Bon]
 <li>Vous devez respecter la façon dont les autres décident de mener leur vie et vous ne pouvez pas obliger quelqu’un à agir d’une manière particulière ou le menacer dans le cas contraire.</li>
 <li>Vous devez exiger la libération d’autrui et combattre pour elle afin que tous puissent prendre sciemment leurs propres décisions. Vous ne participez pas ni ne consentez à l’esclavage ou à la tyrannie.</li>
 </ul>
-<h2 class="title">Réaction de champion</h2>
-<h3 class="title">@Compendium[pf2e.actionspf2e.IX1VlVCL5sFTptEE]{Pas libérateur} <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">R</span></h3></h3>
-<p><strong> Déclencheur</strong> Un ennemi inflige des dégâts, Empoigne ou Saisit votre allié et les deux sont à 4,50 m ou moins de vous</p>
+<h2>Réaction de champion</h2>
+<h3>@Compendium[pf2e.actionspf2e.IX1VlVCL5sFTptEE]{Pas libérateur}<span class="pf2-icon">R</span></h3>
+<p><strong>Déclencheur</strong> Un ennemi inflige des dégâts, Empoigne ou Saisit votre allié et les deux sont à 4,50 m ou moins de vous</p>
 <hr>
 <p> Vous libérez un allié de ce qui l’entrave. Si le déclencheur est un allié qui subit des dégâts, il gagne une résistance à tous les dégâts contre les dégâts déclencheurs égale à 2 + votre niveau. L’allié peut tenter de se libérer des effets qui l’empoignent, l’entravent, l’immobilisent ou le paralysent. Soit il effectue un nouveau jet de sauvegarde contre un tel effet s’il autorise un jet de sauvegarde, soit il tente de S’échapper de l’un de ces effets par une action gratuite. S’il peut se déplacer, il peut Faire un pas par une action gratuite, même s’il n’a pas eu besoin de s’échapper.</p>
-<h2 class="title"> Châtiment divin <span style="float: right;">Niveau 9</span></h2>
+<h2>Châtiment divin <span style="float: right;">Niveau 9</span></h2>
 <p> vous châtiez ceux qui entravent vos alliés. Si l’ennemi déclencheur a utilisé un effet qui fait que votre allié est empoigné, entravé, immobilisé ou paralysé quand vous avez utilisé Pas libérateur, cet ennemi subit un montant de dégâts bons persistants égal à votre modificateur de Charisme.</p>
-<h2 class="title"> Exaltation <span style="float: right;">Niveau 11</span></h2>
-<p>Vous pouvez aider un groupe entier à se mettre en position. Quand vous utilisez Pas libérateur, si votre allié ne tente pas de se libérer d’un effet, vous, tous les alliés à 4,50 m ou moins et l’allié déclencheur, pouvez Faire un pas.</p>
+<h2>Exaltation <span style="float: right;">Niveau 11</span></h2>
+<p>Vous pouvez aider un groupe entier à se mettre en position. Quand vous utilisez Pas libérateur, si votre allié ne tente pas de se libérer d’un effet, vous et tous les alliés à 4,50 m ou moins et l’allié déclencheur, pouvez Faire un pas.</p>
