--- a/data/classfeatures/champion-01-HiIvez0TqESbleB5.htm
+++ b/data/classfeatures/champion-01-HiIvez0TqESbleB5.htm
@@ -1,7 +1,6 @@
 Name: Tyrant
-Nom: Tyran [Loyal mauvais]
-État: changé
-État d'origine: libre
+Nom: Tyran
+État: libre
 
 ------ Description (en) ------
 <p>Might makes right, and you subjugate the weak to keep them in their proper place. You gain the @Compendium[pf2e.actionspf2e.M8RCbthRhB4bxO9t]{Iron Command} champion's reaction and the @Compendium[pf2e.spells-srd.jFmWSIpJGGebim6y]{Touch of Corruption} devotion spell. After the tenets of evil, add these tenets.</p>
@@ -28,13 +27,13 @@ Nom: Tyran [Loyal mauvais]
 ------ Description (fr) ------
 <p>Le pouvoir tient lieu de droit et vous soumettez les faibles pour les maintenir à leur place. Vous obtenez la réaction de champion  @Compendium[pf2e.actionspf2e.M8RCbthRhB4bxO9t]{Ordre de fer} et le sort de dévotion @Compendium[pf2e.spells-srd.jFmWSIpJGGebim6y]{Toucher de corruption}. Après les principes du mal, ajoutez ces principes.</p>
 <ul>
-<li>Ne laissez personne de rang inférieur avoir du pouvoir sur vous ou vous conduire.</li>
-<li>Renforcez sans pitié les hiérarchies établies des maîtres et des esclaves. Renversez ou prenez le contrôle des hiérarchies illégitimes, tels que les gouvernements démocratiques ou les arrognats échelon des plans célestes et remplissez les pouvoirs laissés vides en prenant le pouvoir pour vous-même.</li>
+<li>Ne laissez personne de rang inférieur avoir du pouvoir sur vous ou vous diriger.</li>
+<li>Renforcez sans pitié les hiérarchies établies des maîtres et des esclaves. Renversez ou prenez le contrôle des hiérarchies illégitimes, tels que les gouvernements démocratiques ou les arrogants échelons des plans célestes et remplissez les pouvoirs laissés vides en prenant le pouvoir pour vous-même.</li>
 <li>Obligez les faibles à vous servir. Ce principe n'implique pas que vous laissiez en vie des ennemis si vous pensez qu'ils seront déloyaux s'ils sont placés en servitude, ni ne nécessite que vous gardiez plus de serviteurs que ceux dont vous avez l'utilité ou que vous trouvez pratiques d'avoir.</li>
 </ul>
-<h2 class="title">Châtiment divin<span style="float: right;">Niveau 9</span></h2>
+<h2>Châtiment divin<span style="float: right;">Niveau 9</span></h2>
 <p>Les regrets de la désobéissance se prolongent. Si un ennemi refuse votre Ordre de fer, il subit des dégâts persistants de mal égaux à votre modificateur de Charisme.</p>
-<h2 class="title">Exaltation<span style="float: right;">Niveau 11</span></h2>
-<p>Votre réaction de champion s'améliore de la manière suivante lorsque vous obtenez la capacité de classe exaltation au niveau 11 ; Cela affecte vos ennemis plutôt que vos alliés, lorsqu'ils exaltent votre divinité obscrure en apportant la douleur sur vos ennemis au lieu de peser sur vos compagnons. </p>
-<p>Lorsque vous utilisez Ordre de fer, chaque ennemi dans les 4,5 m autre que la créature déclencheuse doivent aussi se mette à terre ou subir des dégâts mentaux (l'adversaire choisit). Ces créatures subissent seulement les dégâts minimum (typiquement 3 dégâts au niveau 11, 4 au niveau 12, 5au niveau 16 et 6 au niveau 19) et les effets qu'ils subissent ne peuvent être ajustés par rien qui puisse modifier votre Ordre de fer</p>
-<p>Par exemple, le don @Compendium[pf2e.feats-srd.XttSGDuAsRDTuvgS]{Répercussions de fer} ne peut rendre les dégâts en dégâts mentaux persistants pour les créatures autres que la créature déclencheuse.</p>
+<h2>Exaltation<span style="float: right;">Niveau 11</span></h2>
+<p>Votre réaction de champion s'améliore de la manière suivante lorsque vous obtenez la capacité de classe exaltation au niveau 11 ; Cela affecte vos ennemis plutôt que vos alliés, lorsqu'ils exaltent votre divinité obscure en apportant la douleur sur vos ennemis au lieu de peser sur vos compagnons. </p>
+<p>Lorsque vous utilisez Ordre de fer, chaque ennemi dans les 4,5 m autre que la créature déclencheuse doivent aussi se prosterner ou subir des dégâts mentaux (l'adversaire choisit). Ces créatures subissent seulement les dégâts minimum (typiquement 3 dégâts au niveau 11, 4 au niveau 12, 5 au niveau 16 et 6 au niveau 19) et les effets qu'ils subissent ne peuvent être ajustés par rien qui puisse modifier votre Ordre de fer.</p>
+<p>Par exemple, le don @Compendium[pf2e.feats-srd.XttSGDuAsRDTuvgS]{Répercussions de fer} ne peut transformer les dégâts en dégâts mentaux persistants pour les créatures autres que la créature déclencheuse.</p>
