--- a/data/classfeatures/champion-01-peEXunfbSD8WcMFk.htm
+++ b/data/classfeatures/champion-01-peEXunfbSD8WcMFk.htm
@@ -1,7 +1,6 @@
 Name: Paladin
-Nom: Paladin (Loyal Bon)
-État: changé
-État d'origine: officielle
+Nom: Paladin
+État: officielle
 
 ------ Description (en) ------
 <p>You're honorable, forthright, and committed to pushing back the forces of cruelty. You gain the Retributive Strike champion's reaction and the @Compendium[pf2e.spells-srd.zNN9212H2FGfM7VS]{Lay on Hands} devotion spell. After the tenets of good, add these tenets:</p>
@@ -18,16 +17,16 @@ Nom: Paladin (Loyal Bon)
 <h2 class="title">Exalt<span style="float: right;">Level 11</span></h2>
 <p>When you use Retributive Strike, each ally within 15 feet of you with the target in their melee reach can spend a reaction to Strike the target with a -5 penalty.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Vous êtes un individu honorable et franc qui s’est engagé à repousser les forces de la cruauté. Vous obtenez la réaction de champion Frappe punitive et le sort de dévotion  @Compendium[pf2e.spells-srd.zNN9212H2FGfM7VS]imposition des mains}. Ajoutez ces principes après ceux du bien :</span></p>
+<p>Vous êtes un individu honorable et franc qui s’est engagé à repousser les forces de la cruauté. Vous obtenez la réaction de champion Frappe punitive et le sort de dévotion  @Compendium[pf2e.spells-srd.zNN9212H2FGfM7VS]imposition des mains}. Ajoutez ces principes après ceux du bien :</span></p>
 <ul>
 <li>Vous devez agir avec honneur, et ne jamais mentir, tromper ou profiter indûment d’autrui.</li>
 <li>Vous devez respecter l’autorité des dirigeants légitimes et loyaux ainsi que leurs lois, où que vous alliez.</li>
 </ul>
-<h2 class="title">Réaction de champion</h2>
-<p>@Compendium[pf2e.actionspf2e.EAP98XaChJEbgKcK]{Frappe punitive}&nbsp;<img style="height: 15px;" src="https://2e.aonprd.com/Images/Actions/Reaction.png" alt="Reaction"></p>
-<hr>
+<h2>Réaction de champion</h2>
+<p>@Compendium[pf2e.actionspf2e.EAP98XaChJEbgKcK]{Frappe punitive}<span class="pf2-icon">R</span></p>
+<hr />
 <p>Vous protégez votre allié et frappez l’ennemi. L’allié gagne une résistance à tous les dégâts contre les dégâts déclencheurs égale à 2 + votre niveau. Si l’adversaire est à portée d’allonge, faites une Frappe au corps à corps contre lui.</p>
-<h2 class="title">Châtiment divin<span style="float: right;">Niveau 9</span></h2>
+<h2>Châtiment divin<span style="float: right;">Niveau 9</span></h2>
 <p>vous entourez les cibles d’alignement mauvais d’un halo punitif. Si vous réussissez une Frappe punitive contre une cible, celle-ci subit un montant de dégâts bons persistants égal à votre modificateur de Charisme.</p>
-<h2 class="title">Exaltation<span style="float: right;">Niveau 11</span></h2>
+<h2>Exaltation<span style="float: right;">Niveau 11</span></h2>
 <p>quand vous utilisez Frappe punitive, chaque allié à 4,50 m ou moins de vous avec la cible à portée de leur allonge peut effectuer une réaction pour Frapper la cible avec un malus de −5.</p>
