--- a/data/classfeatures/champion-01-sXVX4ARUuo8Egrz5.htm
+++ b/data/classfeatures/champion-01-sXVX4ARUuo8Egrz5.htm
@@ -5,4 +5,4 @@ Nom: Réaction de champion
 ------ Description (en) ------
 <p>Your cause gives you a special reaction. See specific causes for more information.</p>
 ------ Description (fr) ------
-<p>Votre cause vous accorde une réaction spéciale : Vois les causes spécifiques pour davantage d'informations.</p>
+<p>Votre cause vous accorde une réaction spéciale : Voir les causes spécifiques pour davantage d'informations.</p>
