--- a/data/classfeatures/champion-09-VgmfNKtQLgBaNi5r.htm
+++ b/data/classfeatures/champion-09-VgmfNKtQLgBaNi5r.htm
@@ -1,9 +1,8 @@
 Name: Champion Expertise
 Nom: Expertise du champion
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Prayers strengthen your divine power. Your proficiency ranks for your champion class DC and divine spell attack rolls and DCs increase to expert.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Les prières renforcent votre puissance divine. Votre rang de maîtrise dans le DD de classe de champion, les jets d’attaque des sorts divins et les DD de vos sorts divins passent à expert.&nbsp;</span></p>
+<p>Les prières renforcent votre puissance divine. Votre rang de maîtrise dans le DD de classe de champion, les jets d’attaque des sorts divins et les DD de vos sorts divins passent à expert.</p>
