--- a/data/classfeatures/champion-11-xygfZopqXBJ6dKBA.htm
+++ b/data/classfeatures/champion-11-xygfZopqXBJ6dKBA.htm
@@ -1,9 +1,8 @@
 Name: Divine Will
 Nom: Résolution divine
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your faith grants mastery of your will. Your proficiency rank for Will saves increases to master. When you roll a success on a Will save, you get a critical success instead.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Votre foi vous permet de parfaitement contrôler votre volonté. Votre rang de maîtrise pour les jets de Volonté passe à maître. Quand vous obtenez un succès à un jet de Volonté, celui-ci est transformé en succès critique.&nbsp;</span></p>
+<p>Votre foi vous permet de parfaitement contrôler votre volonté. Votre rang de maîtrise pour les jets de Volonté passe à maître. Quand vous obtenez un succès à un jet de Volonté, celui-ci est transformé en succès critique.</p>
