--- a/data/classfeatures/champion-17-voiSCh7ZXA2ogwiC.htm
+++ b/data/classfeatures/champion-17-voiSCh7ZXA2ogwiC.htm
@@ -1,9 +1,8 @@
 Name: Legendary Armor
 Nom: Armure légendaire
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You shield yourself with steel as easily as with faith. Your proficiency ranks for light, medium, and heavy armor, as well as for unarmored defense, increase to legendary.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Votre foi vous protège tout aussi efficacement que l’acier. Votre rang de maîtrise avec les armures légères, intermédiaires et lourdes, ainsi qu’avec la défense sans armure, passe à légendaire.&nbsp;</span></p>
+<p>Votre foi vous protège tout aussi efficacement que l’acier. Votre rang de maîtrise avec les armures légères, intermédiaires et lourdes, ainsi qu’avec la défense sans armure, passe à légendaire.</p>
