--- a/data/classfeatures/champion-19-LzB6X9vOaq3wq1FZ.htm
+++ b/data/classfeatures/champion-19-LzB6X9vOaq3wq1FZ.htm
@@ -1,9 +1,8 @@
 Name: Hero's Defiance
 Nom: Défi du héros
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You can defy fate and continue fighting as long as you have divine energy. You gain the @Compendium[pf2e.spells-srd.uGXWkR2h8q9MRzEM]{Hero's Defiance} devotion spell.</p>
 ------ Description (fr) ------
-<p>Vous pouvez braver le destin et continuer à combattre tant qu’il vous reste de l’énergie divine. Vous gagnez le sort de dévotion défi du héros.&nbsp;</p>
+<p>Vous pouvez braver le destin et continuer à combattre tant qu’il vous reste de l’énergie divine. Vous gagnez le sort de dévotion @Compendium[pf2e.spells-srd.uGXWkR2h8q9MRzEM]{Défi du héros}.</p>
