--- a/data/classfeatures/investigator-01-UIHUNNYZyQ3p4Vmo.htm
+++ b/data/classfeatures/investigator-01-UIHUNNYZyQ3p4Vmo.htm
@@ -1,7 +1,6 @@
 Name: Interrogation Methodology
 Nom: Méthodologie : Interrogatoire
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>People can't help but trust you, whether through your inherent likableness or your firm insistence on sticking to the truth. You have a way about you that gets others talking, and you've developed interrogative techniques to help you get to the truth of your investigations.</p>
