--- a/data/classfeatures/investigator-01-lgo65ldX7WkXC8Ir.htm
+++ b/data/classfeatures/investigator-01-lgo65ldX7WkXC8Ir.htm
@@ -1,7 +1,6 @@
 Name: Devise a Stratagem
 Nom: Concevoir un stratagème
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You can play out a battle in your head, using brains rather than brawn to execute an attack.</p>
