--- a/data/classfeatures/investigator-01-ln2Y1a4SxlU9sizX.htm
+++ b/data/classfeatures/investigator-01-ln2Y1a4SxlU9sizX.htm
@@ -1,7 +1,6 @@
 Name: Alchemical Sciences Methodology
 Nom: Méthodologie : Sciences alchimiques
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Your methodology emphasizes chemical and alchemical analysis, collecting information from unusual particles and fluids found on the scene. You possess enough alchemical know-how to whip up a few tinctures to help you with your cases.</p>
@@ -10,4 +9,4 @@ Nom: Méthodologie : Sciences alchimiques
 ------ Description (fr) ------
 <p>Votre méthodologie se base sur les analyses chimiques et alchimiques, la récolte d’information à partir de l’étude de particules et de fluides trouvés sur la scène du crime. Vous possédez suffisamment de connaissances alchimiques pour fabriquer rapidement quelques concoctions qui vous aident dans vos affaires.</p>
 <p>Vous êtes entraîné en Artisanat et gagnez le don de compétence Artisanat alchimique. De plus, vous gagnez un  @Compendium[pf2e.equipment-srd.qCEOZ6109Yo34tRx]{livre de formules} de base gratuitement et apprenez en plus de cela les formules pour deux objets alchimiques communs de niveau 1, qui doivent être des élixirs ou des outils. Chaque fois que vous gagnez un niveau, vous apprenez la formule d’un élixir ou d’un outil alchimique commun d’un niveau tel que vous pourriez fabriquer l’objet.</p>
-<p>Au cours de vos préparatifs quotidiens, vous pouvez créer un certain nombre de fioles polyvalentes, des préparations alchimiques que vous pourrez ultérieurement rapidement transformer en élixirs et en outils ; ce nombre est égal à votre modificateur d’Intelligence. Vous pouvez utiliser l’action  @Compendium[pf2e.actionspf2e.QHFMeJGzFWj2QczA]{Préparation rapide} pour transformer l’une de ces fioles en un élixir ou un outil alchimique dont vous connaissez la formule.</p>
+<p>Au cours de vos préparatifs quotidiens, vous pouvez créer un certain nombre de fioles polyvalentes, des préparations alchimiques que vous pourrez ultérieurement rapidement transformer en élixirs et en outils ; ce nombre est égal à votre modificateur d’Intelligence. Vous pouvez utiliser l’action @Compendium[pf2e.actionspf2e.QHFMeJGzFWj2QczA]{Préparation rapide} pour transformer l’une de ces fioles en un élixir ou un outil alchimique dont vous connaissez la formule.</p>
