--- a/data/classfeatures/investigator-01-g3mNzNphtVxyR9Xr.htm
+++ b/data/classfeatures/investigator-01-g3mNzNphtVxyR9Xr.htm
@@ -1,7 +1,6 @@
 Name: Empiricism Methodology
 Nom: Méthodologie : empirisme
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Everything comes down to data. Calculating statistics, running numbers, and using inductive reasoning allows you to determine the most likely outcome of any scenario, and anything out of place draws your keen attention.</p>
