--- a/data/classfeatures/investigator-09-PFvB79O2VFdiAeSj.htm
+++ b/data/classfeatures/investigator-09-PFvB79O2VFdiAeSj.htm
@@ -1,7 +1,6 @@
 Name: Investigator Expertise
 Nom: Expertise de l'enquêteur
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You've refined your investigative techniques to an exceptional degree. Your circumstance bonus from @Compendium[pf2e.actionspf2e.xTK2zsWFyxSJvYbX]{Pursue a Lead} increases to +2. Your proficiency rank for your investigator class DC increases to expert.</p>
