capacités de classe moine et oracle

--- a/data/classes/YPxpk9JbMnKjbNLc.htm
+++ b/data/classes/YPxpk9JbMnKjbNLc.htm
@@ -364,7 +364,7 @@ Nom: Moine
 <p>Vous savez modifier votre corps pour effectuer des attaques à mains nues imprégnées de l’énergie mystique de métaux rares. On considère que vos attaques à mains nues sont en fer froid et en argent. Ceci vous permet d’infliger plus de dégâts à divers types de créatures surnaturelles, comme les démons, les diables et les fées.</p>
 <h2>Expertise du moine<span style="float: right;">Niveau 9</span></h2>
 <p>Votre rang de maîtrise dans le DD de classe de moine passe à expert. Si vous avez des sorts ki, le rang de maîtrise de vos attaques de sort et de votre DD des sorts issus de la tradition magique que vous utilisez pour lancer des sorts ki passe à expert.</p>
-<h2>Seconde voie vers la perfection<span style="float: right;">Niveau 11</span></h2>
+<h2>Deuxième voie vers la perfection<span style="float: right;">Niveau 11</span></h2>
 <p>Vous avez appris à trouver la perfection dans chacune de vos réussites. Choisissez un jet de sauvegarde différent de celui que vous avez choisi avec la voie vers la perfection. Votre rang de maîtrise dans le jet de sauvegarde choisi passe à maître. Quand vous obtenez un succès au jet de sauvegarde choisi, celui-ci est transformé en succès critique.</p>
 <h2>Maîtrise gracieuse<span style="float: right;">Niveau 13</span></h2>
 <p>Vos mouvements sont toujours gracieux en combat et vous permettent d’esquiver et de parer les coups. Votre rang de maîtrise pour la défense sans armure passe à maître.</p>
