--- a/data/classfeatures/monk-15-haoTkr2U5k7kaAKN.htm
+++ b/data/classfeatures/monk-15-haoTkr2U5k7kaAKN.htm
@@ -9,8 +9,11 @@ Nom:
 <p>@Compendium[pf2e.classfeatures.8kukH9c4h82e3qjl]{Third Path to Perfection (Reflex)}</p>
 <p>@Compendium[pf2e.classfeatures.oVNRYF0FHbH8NsJD]{Third Path to Perfection (Will)}</p>
 ------ Description (fr) ------
-<p>Vous avez fait de grands progrès dans vos études personnelles de l'illumination. Choisissez l'un des jets de sauvegarde que vous avez sélectionnés pour le chemin de la perfection ou le second chemin de la perfection. Votre rang de compétence pour le type de sauvegarde choisi passe à légendaire. Lorsque vous obtenez un échec critique sur le type de sauvegarde choisi, vous obtenez un échec à la place. Lorsque vous obtenez un échec sur le type de sauvegarde choisi contre un effet qui inflige des dégâts, vous subissez la moitié des dégâts.</p>
+<p>Vous avez beaucoup progressé dans votre quête personnelle de l’illumination. Choisissez un des jets de sauvegarde choisi avec Voie vers la perfection ou avec Deuxième voie vers la perfection. Votre rang de maîtrise avec ce jet de sauvegarde passe à légendaire.</p>
+<p>Quand vous obtenez un échec critique au jet de sauvegarde chois, celui-ci se transforme en échec. Lorsque vous obtenez un échec sur le jet de sauvegarde choisi contre un effet qui inflige des dégâts, vous ne subissez que la moitié des dégâts.</p>
 <hr />
-<p>@Compendium[pf2e.classfeatures.dUMsM0yDTCdV31p6]{Troisième voie de la perfection (Force)}</p>
-<p>@Compendium[pf2e.classfeatures.8kukH9c4h82e3qjl]{Troisième voie de la perfection (Réflexe)}</p>
-<p>@Compendium[pf2e.classfeatures.oVNRYF0FHbH8NsJD]{Troisième voie de la perfection (Volonté)}</p>
+<ul>
+<li>@Compendium[pf2e.classfeatures.8kukH9c4h82e3qjl]{Troisième voie vers la perfection (Réflexes)}</li>
+<li>@Compendium[pf2e.classfeatures.dUMsM0yDTCdV31p6]{Troisième voie vers la perfection (Vigueur)}</li>
+<li>@Compendium[pf2e.classfeatures.oVNRYF0FHbH8NsJD]{Troisième voie vers la perfection (Volonté)}</li>
+</ul>
