--- a/data/classfeatures/monk-01-NLHHHiAcdnZ5ohc2.htm
+++ b/data/classfeatures/monk-01-NLHHHiAcdnZ5ohc2.htm
@@ -1,11 +1,12 @@
 Name: Flurry of Blows
 Nom: Déluge de coups
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You can attack rapidly with fists, feet, elbows, knees, and other unarmed attacks. You gain the Flurry of Blows action.</p>
 <hr />
 <p>Make two unarmed @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strikes}. If both hit the same creature, combine their damage for the purpose of resistances and weaknesses. Apply your multiple attack penalty to the Strikes normally. As it has the flourish trait, you can use Flurry of Blows only once per turn.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Vous effectuez plusieurs attaques rapides avec vos poings, vos pieds, vos coudes, vos genoux et d’autres parties de votre corps. Vous savez accomplir l’action déluge de coups.</span></p>
+<p>Vous effectuez plusieurs attaques rapides avec vos poings, vos pieds, vos coudes, vos genoux et autres attaques à mains nues. Vous savez accomplir l’action déluge de coups.</p>
+<hr />
+<p>Effectuez deux @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} à mains nues. Si les deux touchent la même créature, ajoutez leurs dégâts lorsqu'il s'agit de résistance et de faiblesse. Appliquez votre pénalité d'attaque multiple à la Frappe comme à l'ordinaire. Comme il possède le trait sophistication, vous ne pouvez utiliser Déluge de coups seulement une fois par round.</p>
