--- a/data/classfeatures/monk-05-VgZIutWjFl8oZQFi.htm
+++ b/data/classfeatures/monk-05-VgZIutWjFl8oZQFi.htm
@@ -1,9 +1,8 @@
 Name: Expert Strikes
 Nom: Frappes expertes
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You've practiced martial arts and have now surpassed your former skill. Your proficiency ranks for unarmed attacks and simple weapons increase to expert.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Vous vous êtes entraîné dans la pratique des arts martiaux et avez amélioré vos compétences en la matière. Votre rang de maîtrise avec les armes simples et les attaques à mains nues passe à expert.&nbsp;</span></p>
+<p>Vous vous êtes entraîné dans la pratique des arts martiaux et avez amélioré vos compétences en la matière. Votre rang de maîtrise avec les armes simples et les attaques à mains nues passe à expert.</p>
