--- a/data/classfeatures/monk-07-1K6m6AVmn3r8XZ9d.htm
+++ b/data/classfeatures/monk-07-1K6m6AVmn3r8XZ9d.htm
@@ -1,6 +1,6 @@
 Name: Path to Perfection
-Nom: 
-État: auto-trad
+Nom: Voie vers la perfection
+État: officielle
 
 ------ Description (en) ------
 <p>You have progressed along your own path to enlightenment. Choose your Fortitude, Reflex, or Will saving throw. Your proficiency rank for the chosen saving throw increases to master. When you roll a success on the chosen saving throw, you get a critical success instead.</p>
@@ -9,8 +9,9 @@ Nom:
 <p>@Compendium[pf2e.classfeatures.Bwr9G9IR4ynm5wzz]{Path to Perfection (Reflex)}</p>
 <p>@Compendium[pf2e.classfeatures.7lanxgmoOHNdtDe2]{Path to Perfection (Will)}</p>
 ------ Description (fr) ------
-<p>Vous avez progressé sur votre propre chemin vers l'illumination. Choisissez votre jet de sauvegarde de Force, Réflexe ou Volonté. Votre rang de compétence pour le jet de sauvegarde choisi passe à maître. Lorsque vous obtenez un succès au jet de sauvegarde choisi, vous obtenez un succès critique à la place.</p>
-<hr />
-<p>@Compendium[pf2e.classfeatures.KIqptJsjq9pS9CP7]{Path to Perfection (Fortitude)}</p>
-<p>@Compendium[pf2e.classfeatures.Bwr9G9IR4ynm5wzz]{Voie de la Perfection (Réflexe)}</p>
-<p>@Compendium[pf2e.classfeatures.7lanxgmoOHNdtDe2]{Voie de la perfection (Volonté)}</p>
+<p>Vous progressez sur votre propre voie vers l’illumination. Choisissez entre votre jet de sauvegarde de Réflexes, de Vigueur ou de Volonté. Votre rang de maîtrise dans le jet de sauvegarde choisi passe à maître. Quand vous obtenez un succès au jet de sauvegarde choisi, celui-ci est transformé en succès critique.</p>
+<ul>
+<li>@Compendium[pf2e.classfeatures.Bwr9G9IR4ynm5wzz]{Voie vers la perfection (Réflexes)}</li>
+<li>@Compendium[pf2e.classfeatures.KIqptJsjq9pS9CP7]{Voie vers la perfection (Vigueur)}</li>
+<li>@Compendium[pf2e.classfeatures.7lanxgmoOHNdtDe2]{Voie vers la perfection (Volonté)}</li>
+</ul>
