--- a/data/classfeatures/monk-07-KIqptJsjq9pS9CP7.htm
+++ b/data/classfeatures/monk-07-KIqptJsjq9pS9CP7.htm
@@ -1,7 +1,6 @@
 Name: Path to Perfection (Fortitude)
 Nom: Voie vers la Perfection - Vigueur
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You have progressed along your own path to enlightenment. Choose your Fortitude, Reflex, or Will saving throw. Your proficiency rank for the chosen saving throw increases to master. When you roll a success on the chosen saving throw, you get a critical success instead.</p>
