--- a/data/classfeatures/monk-11-RVPhB0RqmoJg7xI6.htm
+++ b/data/classfeatures/monk-11-RVPhB0RqmoJg7xI6.htm
@@ -1,7 +1,6 @@
 Name: Second Path to Perfection (Will)
 Nom: Deuxième voie vers la Perfection - Volonté
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You've learned to find perfection in every success. Choose a different saving throw than the one you chose for your path to perfection. Your proficiency rank for the chosen saving throw increases to master. If you roll a success with the chosen saving throw, you instead critically succeed.</p>
