--- a/data/classfeatures/monk-11-y6qnbUc8y0815QNE.htm
+++ b/data/classfeatures/monk-11-y6qnbUc8y0815QNE.htm
@@ -1,6 +1,6 @@
 Name: Second Path to Perfection
-Nom: 
-État: auto-trad
+Nom: Deuxième voie vers la perfection
+État: libre
 
 ------ Description (en) ------
 <p>You've learned to find perfection in every success. Choose a different saving throw than the one you chose for your path to perfection. Your proficiency rank for the chosen saving throw increases to master. If you roll a success with the chosen saving throw, you instead critically succeed.</p>
@@ -9,8 +9,10 @@ Nom:
 <p>@Compendium[pf2e.classfeatures.yDL9l9Klki6gE2ZD]{Second Path to Perfection (Reflex)}</p>
 <p>@Compendium[pf2e.classfeatures.RVPhB0RqmoJg7xI6]{Second Path to Perfection (Will)}</p>
 ------ Description (fr) ------
-<p>Tu as appris à trouver la perfection dans chaque succès. Choisissez un jet de sauvegarde différent de celui que vous avez choisi pour votre chemin vers la perfection. Votre rang de compétence pour le jet de sauvegarde choisi passe à maître. Si vous obtenez un succès avec le jet de sauvegarde choisi, vous obtenez un succès critique à la place.</p>
+<p>Vous avez appris à trouver la perfection dans chacune de vos réussites. Choisissez un jet de sauvegarde différent de celui que vous avez choisi avec la voie vers la perfection. Votre rang de maîtrise dans le jet de sauvegarde choisi passe à maître. Quand vous obtenez un succès au jet de sauvegarde choisi, celui-ci est transformé en succès critique.</p>
 <hr />
-<p>@Compendium[pf2e.classfeatures.XZnPwZ0ohlDXlFea]{Second chemin vers la perfection (Force)}</p>
-<p>@Compendium[pf2e.classfeatures.yDL9l9Klki6gE2ZD]{Second chemin vers la perfection (Réflexe)}</p>
-<p>@Compendium[pf2e.classfeatures.RVPhB0RqmoJg7xI6]{Second chemin vers la perfection (Volonté)}</p>
+<ul>
+<li>@Compendium[pf2e.classfeatures.yDL9l9Klki6gE2ZD]{Deuxième voie vers la perfection (Réflexes)}</li>
+<li>@Compendium[pf2e.classfeatures.XZnPwZ0ohlDXlFea]{Deuxième voie vers la perfection (Vigueur)}</li>
+<li>@Compendium[pf2e.classfeatures.RVPhB0RqmoJg7xI6]{Deuxième voie vers la perfection (Volonté)}</li>
+</ul>
