--- a/data/classfeatures/monk-11-yDL9l9Klki6gE2ZD.htm
+++ b/data/classfeatures/monk-11-yDL9l9Klki6gE2ZD.htm
@@ -1,7 +1,6 @@
 Name: Second Path to Perfection (Reflex)
-Nom: Deuxième voie vers la Perfection -Réflexes
-État: changé
-État d'origine: libre
+Nom: Deuxième voie vers la Perfection - Réflexes
+État: libre
 
 ------ Description (en) ------
 <p>You've learned to find perfection in every success. Choose a different saving throw than the one you chose for your path to perfection. Your proficiency rank for the chosen saving throw increases to master. If you roll a success with the chosen saving throw, you instead critically succeed.</p>
