--- a/data/classfeatures/monk-13-0iidKkzC2yy13lIf.htm
+++ b/data/classfeatures/monk-13-0iidKkzC2yy13lIf.htm
@@ -1,9 +1,8 @@
 Name: Master Strikes
 Nom: Frappes de maître
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You have honed your skill in using your body as a weapon. Your proficiency ranks for unarmed attacks and simple weapons increase to master.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Vous avez perfectionné votre aptitude à vous servir de votre corps comme d’une arme. Votre rang de maîtrise avec les armes simples et les attaques à mains nues passe à maître.&nbsp;</span></p>
+<p>Vous avez perfectionné votre aptitude à vous servir de votre corps comme d’une arme. Votre rang de maîtrise avec les armes simples et les attaques à mains nues passe à maître.</p>
