--- a/data/classfeatures/monk-13-95LI24ZSx0d4qfKX.htm
+++ b/data/classfeatures/monk-13-95LI24ZSx0d4qfKX.htm
@@ -1,9 +1,8 @@
 Name: Graceful Mastery
 Nom: Maîtrise gracieuse
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You move with perpetual grace in battle, eluding and turning aside blows. Your proficiency rank for unarmored defense increases to master.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Vos mouvements sont toujours gracieux en combat et vous permettent d’esquiver et de parer les coups. Votre rang de maîtrise pour la défense sans armure passe à maître.&nbsp;</span></p>
+<p>Vos mouvements sont toujours gracieux en combat et vous permettent d’esquiver et de parer les coups. Votre rang de maîtrise pour la défense sans armure passe à maître.</p>
