--- a/data/classfeatures/oracle-01-gjOGOR30Czpnx3tM.htm
+++ b/data/classfeatures/oracle-01-gjOGOR30Czpnx3tM.htm
@@ -1,7 +1,6 @@
 Name: Battle Mystery
 Nom: Mystère du combat
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Warlike forces fill you with physical might and tactical knowledge, aiming to have you uphold the glory of combat, fight to improve the world, prepare against the necessity of conflict, or endure the inevitability of war. You might draw upon deities such as Gorum, Iomedae, Rovagug, the Horseman of War Szuriel, the Queen of the Night Eiseth, the Vudrani god Diomazul, and others, or you might find power in the unending conflict between the armies of Heaven and Hell, the Elemental Planes, the Outer Gods, or even the collective spirits of those who fought in wars over the ages.</p>
@@ -33,10 +32,18 @@ Nom: Mystère du combat
 <p><strong>Avantage de mystère</strong> Vous connaissez l’art de la guerre. Vous êtes entraîné au port des armures intermédiaires et lourdes. Au niveau 13, si vous gagnez la capacité d’expertise aux armures légères, vous devenez également expert dans ces deux types d’armures. Choisissez un groupe d’armes qui correspond à votre mystère. Vous êtes qualifié dans toutes les armes de guerre de ce groupe. Au niveau 11, si vous gagnez la capacité d’expertise martiale, vous devenez également expert pour les armes martiales du groupe que vous avez choisi et vous devenez qualifié dans les armes avancées de ce groupe.</p>
 <p><strong>Compétence qualifiée</strong> Athlétisme</p>
 <p><strong>tour de magie accordé </strong>@Compendium[pf2e.spells-srd.TVKNbcgTee19PXZR]{Bouclier}</p>
-<p><strong>Sorts de révélation</strong> initial: @Compendium[pf2e.spells-srd.dqaCLzINHBiKjh4J]{Appel aux armes}; avancé: @Compendium[pf2e.spells-srd.2jWVNdVlbJq84dfT]{Persistance du champ de bataille}; supérieur: @Compendium[pf2e.spells-srd.4j0FQ1mkidBAXuQV]{Haut fait héroïque}</p>
+<p><strong>Sorts de révélation</strong></p>
+<ul>
+<li>initial : @Compendium[pf2e.spells-srd.dqaCLzINHBiKjh4J]{Appel aux armes}</li>
+<li>avancé : @Compendium[pf2e.spells-srd.2jWVNdVlbJq84dfT]{Persistance du champ de bataille};</li>
+<li>supérieur : @Compendium[pf2e.spells-srd.4j0FQ1mkidBAXuQV]{Haut fait héroïque}</li>
+</ul>
 <p><strong>Domaines liés</strong> puissance, zèle</p>
 <h3>Malédiction du fardeau du héros</h3>
 <p>Vous vous dépassez quand l’adrénaline coule à flot et que votre vie ne dépend plus que de votre puissance physique, mais être le conduit des prouesses de combat partagées par plusieurs âges affaiblit votre corps quand le combat s'achève. Vous émettez une légère odeur d’acier et de sang que vous ne parvenez ni à masquer ni à supprimer, vous semblez être plus musclé que vous ne l’êtes réellement et vous entendez des chocs métalliques et des bruits de combat au loin à tout instant.</p>
-<p><strong>Malédiction mineure </strong>Votre corps est en manque quand vous n’infligez pas des douleurs à vos ennemis. Vous subissez un malus de statut de -2 à la CA et aux jets de sauvegarde mais, chaque fois que vous effectuez une Frappe, ces malus sont temporairement annulés jusqu’au début de votre prochain tour.</p>
-<p><strong>Malédiction modérée</strong> La poids du conflit fatigue votre corps, même si le combat vous ravive. Effectuer une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} réduit les pénalités de votre malédiction mineure à -1 au lieu de les annuler temporairement. Vous gagnez un bonus de statut de +2 aux jets de dégâts avec les armes ou les attaques à mains nues. Vous gagnez également une guérison rapide égale à la moitié de votre niveau quand vous êtes impliqués dans une rencontre de combat non triviale.</p>
-<p><strong>Malédiction majeure (11e)</strong> Votre corps est capable de hauts-faits vraiment héroïques mais ceux-ci affaiblissent votre concentration mentale. La guérison rapide de votre malédiction modérée est égale à votre niveau et le bonus aux dégâts est de +6. Vous gagnez un bonus de stat de +1 aux jets d’attaques avec des armes et des attaques sans arme, mais vous êtes @Compendium[pf2e.conditionspf2e.e1XGnhKNSQIm5IXg]{Stupéfié} 2.</p>
+<h4>Malédiction mineure</h4>
+<p>Votre corps est en manque quand vous n’infligez pas des douleurs à vos ennemis. Vous subissez un malus de statut de -2 à la CA et aux jets de sauvegarde mais, chaque fois que vous effectuez une Frappe, ces malus sont temporairement annulés jusqu’au début de votre prochain tour.</p>
+<h4>Malédiction modérée</h4> 
+<p>Le poids du conflit fatigue votre corps, même si le combat vous ravive. Effectuer une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} réduit les pénalités de votre malédiction mineure à -1 au lieu de les annuler temporairement. Vous gagnez un bonus de statut de +2 aux jets de dégâts avec les armes ou les attaques à mains nues. Vous gagnez également une guérison rapide égale à la moitié de votre niveau quand vous êtes impliqué dans une rencontre de combat non triviale.</p>
+<h4>Malédiction majeure (11e)</h4> 
+<p>Votre corps est capable de hauts-faits vraiment héroïques mais ceux-ci affaiblissent votre concentration mentale. La guérison rapide liée à votre malédiction modérée est égale à votre niveau et le bonus aux dégâts est de +6. Vous gagnez un bonus de statut de +1 aux jets d’attaques avec des armes et des attaques à mains nues, mais vous êtes @Compendium[pf2e.conditionspf2e.e1XGnhKNSQIm5IXg]{Stupéfié} 2.</p>
