capacités de classe

--- a/data/classfeatures/oracle-01-7AVspOB6ITNzGFZi.htm
+++ b/data/classfeatures/oracle-01-7AVspOB6ITNzGFZi.htm
@@ -1,7 +1,6 @@
 Name: Divine Spellcasting (Oracle)
 Nom: Incantation divine (Oracle)
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p dir="ltr">Your mystery provides you with divine magical power. You can cast spells using the Cast a Spell activity, and you can supply material, somatic, and verbal components when casting spells. your unconventional access to this divine power means you can usually replace material components with somatic components, so you don't need to use a material component pouch when casting spells.</p>
