--- a/data/classfeatures/None-17-BJYSUbFUGcTLaPDn.htm
+++ b/data/classfeatures/None-17-BJYSUbFUGcTLaPDn.htm
@@ -8,7 +8,7 @@ Nom: Maître chasseur (Précision)
 <p>The second time in a round you hit your hunted prey, you also deal 1d8 precision damage.</p>
 <p>At 19th level, your second hit in a round against your hunted prey deals 2d8 precision damage, and your third hit in a round against your hunted prey deals 1d8 precision damage.</p>
 ------ Description (fr) ------
-<h2 class="title">Amélioration de Maître chasseur<span style="float: right;">Niveau 17</span></h2>
+<h2>Amélioration de Maître chasseur<span style="float: right;">Niveau 17</h2>
 <p>Votre maîtrise martiale vous permet de toucher à multiples reprises les points vitaux de votre proie. </p>
 <p>La deuxième fois que vous touchez votre proie lors d’un même round, vous lui infligez également 1d8 dégâts de précision.</p>
 <p>Au niveau 19, votre deuxième attaque réussie contre votre proie lors d’un même round inflige 2d8 dégâts de précision, et la troisième 1d8 dégâts de précision.</p>
