--- a/data/equipment/consumable-08-6KdYdFovFBivwI8M.htm
+++ b/data/equipment/consumable-08-6KdYdFovFBivwI8M.htm
@@ -1,8 +1,8 @@
 Name: Striking Snare
-Nom: 
-État: auto-trad
+Nom: Piège de frappe
+État: libre
 
 ------ Description (en) ------
 <p>You affix a trip line or other trigger to a group of either stones or wooden stakes to strike a creature that enters the snare's square. The creature must attempt a DC 26 basic Reflex saving throw. If you choose stones, the snare deals 9d8 bludgeoning damage; if you choose spikes, it deals 9d8 piercing damage.</p>
 ------ Description (fr) ------
-<p>Vous fixez une ligne de déclenchement ou un autre déclencheur à un groupe de pierres ou de pieux en bois pour frapper une créature qui entre dans la case du piège. La créature doit tenter un jet de sauvegarde des Réflexes de base DC 26. Si vous choisissez les pierres, le collet inflige 9d8 points de dégâts de matraquage ; si vous choisissez les pieux, il inflige 9d8 points de dégâts perforants.</p>
+<p>Vous fixez une ligne de déclenchement ou un autre déclencheur à un groupe de pierres ou de pieux en bois pour frapper une créature qui entre dans la case du piège. La créature doit tenter un jet de sauvegarde de Réflexe de base DD 26. Si vous choisissez les pierres, le piège inflige 9d8 points de dégâts contondants ; si vous choisissez les pieux, il inflige 9d8 points de dégâts perforants.</p>
