--- a/data/equipment/consumable-09-xvJ2jzqipBNrwZ2w.htm
+++ b/data/equipment/consumable-09-xvJ2jzqipBNrwZ2w.htm
@@ -1,8 +1,6 @@
 Name: Sight-Theft Grit
-Nom: 
-État: changé
-État d'origine: auto-trad
-
+Nom: Sable de Vol-vue
+État: libre
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact;</p>
 <p>This blackish grit seems to absorb light and resembles particularly dark flakes of black pepper. Infused with the blindness spell, sight-theft grit causes the victim's sight to dim and then depart altogether. The @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Blinded} condition from this poison lasts for an additional 24 hours once the poison has run its course.</p>
@@ -16,14 +14,14 @@ Nom:
 <hr />
 <p>Craft Requirements Supply one casting of @Compendium[pf2e.spells-srd.VosLNn2M8S7JH67D]{Blindness}.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact;</p>
-<p>Ce gravillon noirâtre semble absorber la lumière et ressemble à des flocons particulièrement foncés de poivre noir. Infusé avec le sort de cécité, le grit de vol de vue fait baisser la vue de la victime, puis la fait disparaître complètement. La condition @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Blinded} de ce poison dure 24 heures de plus une fois que le poison a fait son effet ;
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p>Ce sable grumeleux noirâtre semble absorber la lumière et ressemble à des flocons particulièrement foncés de poivre noir. Infusé avec le sort de cécité, le sable de Vol-vue fait baisser la vue de la victime, puis la rend complètement aveugle. La condition @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Aveuglé} de ce poison dure 24 heures de plus, une fois que le poison a fait son effet.
 <hr />
-<p><strong>Jet de sauvegarde</strong> DC 28 Fortitude;</p>
+<p><strong>Jet de sauvegarde</strong> DD 28 Vigueur</p>
 <p><strong>Début</strong> 10 minutes;</p>
 <p><strong>Durée maximale</strong> 14 heures;</p>
-<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{ébloui} et une pénalité d'état de -2 aux tests de Perception visuelle (1 heure);</p>
-<p><strong>Stade 2</strong> ébloui et une pénalité d'état de -4 aux tests de Perception visuelle (1 heure);</p>
-<p><strong>Stade 3</strong> aveuglé ([[/r 2d6 #hours]] heures)</p>
+<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Ébloui} et un malus d'état de -2 aux tests de Perception visuelle (1 heure);</p>
+<p><strong>Stade 2</strong> Ébloui et un malus d'état de -4 aux tests de Perception visuelle (1 heure);</p>
+<p><strong>Stade 3</strong> Aveuglé [[/r 2d6 #hours]] heures</p>
 <hr />
-<p>Exigences d'artisanat Fournir un lancer de @Compendium[pf2e.spells-srd.VosLNn2M8S7JH67D]{Blindness}.</p>
+<p>Conditions de fabrication: Lancer un sort de @Compendium[pf2e.spells-srd.VosLNn2M8S7JH67D]{Cécité}.</p>
