--- a/data/equipment/consumable-10-3IknuOpIV1OSNl98.htm
+++ b/data/equipment/consumable-10-3IknuOpIV1OSNl98.htm
@@ -1,13 +1,12 @@
 Name: Lucky Rabbit's Foot
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Patte de lapin de Chance
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">R</span> envision</p>
 <p><strong>Trigger</strong> You fail a Reflex save against a damaging effect.</p>
 <p>This treated rabbit's foot has shockingly blue fur and is often carried by vagabonds who worship Desna. When you activate the foot, reroll the triggering Reflex save. If you fail the second roll as well, you can Stride up to your Speed.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">R</span> envision</p>
-<p><strong>Déclencheur</strong> Vous échouez à une sauvegarde de Réflexes contre un effet dommageable.</p>
-<p>Cette patte de lapin traitée'a une fourrure bleue choquante et est souvent portée par les vagabonds qui vénèrent Desna. Lorsque vous activez le pied, relancez le jet de sauvegarde des Réflexes qui le déclenche. Si vous échouez également au second jet, vous pouvez marcher à la hauteur de votre vitesse ;
+<p><strong>Activation</strong> <span class="pf2-icon">R</span> Imaginer</p>
+<p><strong>Déclencheur</strong> Vous échouez à un jet de sauvegarde Réflexe contre un effet qui inflige des dégâts.</p>
+<p>Cette patte de lapin traitée présente une fourrure d'un bleu choquant et est souvent portée par les vagabonds qui vénèrent Desna. Lorsque vous activez le pied, relancez le jet de sauvegarde Réflexe qui le déclenche. Si vous échouez également au second jet, vous pouvez @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marcher rapidement} d'une distance maximale à la hauteur de votre vitesse.
