--- a/data/equipment/consumable-10-kbjspHV7kwKKULmd.htm
+++ b/data/equipment/consumable-10-kbjspHV7kwKKULmd.htm
@@ -1,11 +1,11 @@
 Name: Potion of Sonic Resistance (Moderate)
-Nom: 
-État: changé
+Nom: Potion de résistance au son (modéré)
+État: officielle
 État d'origine: auto-trad
 
 ------ Description (en) ------
 <p>Drinking this thick, fortifying potion grants resistance 10 against sonic damage for 1 hour.</p>
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 ------ Description (fr) ------
-<p>Boire cette potion épaisse et fortifiante confère une résistance de 10 aux dégâts soniques pendant 1 heure.</p>
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
+<p>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 10 contre les dégâts de son pendant 1 heure.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
