--- a/data/equipment/consumable-06-bDnk4TSzvD5BQmE5.htm
+++ b/data/equipment/consumable-06-bDnk4TSzvD5BQmE5.htm
@@ -1,11 +1,10 @@
 Name: Potion of Fire Resistance (Lesser)
-Nom: Potion de résistance au feu (inférieure)
-État: changé
-État d'origine: officielle
+Nom: Potion de résistance au feu (inférieur)
+État: officielle
 
 ------ Description (en) ------
 <p>Drinking this thick, fortifying potion grants resistance 5 against fire damage for 1 hour.</p>
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 ------ Description (fr) ------
-<p><span>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 5 contre les dégâts de feu pendant 1 heure </p>
-<p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 5 contre les type dégâts de feu pendant 1 heure. 
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
