--- a/data/equipment/consumable-14-1OJxRnPs0viJVrZq.htm
+++ b/data/equipment/consumable-14-1OJxRnPs0viJVrZq.htm
@@ -1,11 +1,10 @@
 Name: Potion of Fire Resistance (Greater)
-Nom: Potion de résistance au feu (supérieure)
-État: changé
-État d'origine: officielle
+Nom: Potion de résistance au feu (supérieur)
+État: officielle
 
 ------ Description (en) ------
 <p>Drinking this thick, fortifying potion grants resistance 15 against fire damage for 1 hour.</p>
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 ------ Description (fr) ------
-<p><span>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 15 contre les type dégâts de feu pendant 1 heure. 
-<p><span><strong>Activation</strong><span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span>Interagir</span></p>
+<p>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 15 contre les type dégâts de feu pendant 1 heure. 
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
